--- a/第7章 类/第7章 类.md
+++ b/第7章 类/第7章 类.md
@@ -2149,6 +2149,7 @@ Sales_data &combine(const Sales_data&) const;
 ```
 
 【解答】
+
 (a) 是正确的，编译器首先用给定的 `string` 对象 `s` 自动创建一个 `Sales_data` 对象，然后这个新生成的临时对象传给 `combine` 的形参（类型是 `Sales_data`），函数正确执行并返回结果。
 
 (b) 无法编译通过，因为 `combine` 函数的参数是一个非常量引用，而 `s` 是一个 `string` 对象，编译器用 `s` 自动创建一个 `Sales_data` 临时对象，但是这个新生成的临时对象无法传递给 `combine` 所需的非常量引用。
@@ -2187,6 +2188,8 @@ item.combine(cin);
 
 `Sales_data` 对象是个临时量，一旦 `combine` 完成我们就不能再访问它了。
 实际上，我们构建了一个对象，先将它的值加到 `item` 中，随后将其丢弃。
+
+
 
 #### 抑制构造函数定义的隐式转换
 
@@ -2232,6 +2235,16 @@ explicit Sales_data::Sales_data(istream& is)
 
 使用 `explicit` 的优点是避免因隐式类类型转换而带来意想不到的错误，缺点是当用户的确需要这样的类类型转换时，不得不使用略显烦琐的方式来实现。
 
+**练习7.50：确定在你的 Person 类中是否有一些构造函数应该是 explicit 的。**
+
+【出题思路】`explicit` 的优点是可以避免程序员不期望的隐式类类型转换。
+
+【解答】我们之前定义的 `Person` 类含有 `3` 个构造函数，因为前两个构造函数接受的参数个数都不是 `1`，所以它们不存在隐式转换的问题，当然也不必指定 `explicit`。
+
+`Person` 类的最后一个构造函数 `Person(std::istream &is);` 只接受一个参数，默认情况下它会把读入的数据自动转换成 `Person` 对象。
+我们更倾向于严格控制 `Person` 对象的生成过程，如果确实需要使用 `Person` 对象，可以明确指定；
+在其他情况下则不希望自动类型转换的发生。所以应该把这个构造函数指定为 `explicit` 的。
+
 #### `explicit`构造函数只能用于直接初始化
 
 当我们执行拷贝形式的初始化时，我们只能使用直接初始化而不能使用 `explicit` 构造函数：
@@ -2263,6 +2276,17 @@ item.combine(static_cast<Sales_data>(cin));
 
 - 接受一个单参数的 `const char*` 的 `string` 构造函数不是 explicit 的。
 - 接受一个容量参数的 `vector` 构造函数是 explicit 的。
+
+**练习7.51: `vector` 将其单参数的构造函数定义成`explicit`的，而 `String` 则不是，你觉得原因何在？**
+
+【出题思路】
+从参数类型到类类型的自动转换是否有意义依赖于程序员的看法，如果这种转换是**自然而然**的，则不应该把它定义成`explicit`的；
+如果二者的语义距离较远， 则为了避免不必要的转换，应该指定对应的构造函数是 `explicit`的。
+
+【解答】
+`string` 接受的单参数是 `const char*` 类型，如果我们得到了一个常量字符指针（字符数组），则把它看作 `string` 对象是自然而然的过程，编译器自动把参数类型转换成类类型也非常符合逻辑，因此我们无须指定为 `explicit` 的。
+
+与 `string` 相反，`vector` 接受的单参数是 `int` 类型，这个参数的原意是指定 `vector` 的容量。如果我们在本来需要 `vector` 的地方提供一个 `int` 值并且希望这个 `int` 值自动转换成 `vector`，则这个过程显得比较牵强，因此把 `vector` 的单参数构造函数定义成 `explicit` 的更加合理。
 
 ### 7.5.5 聚合类
 
