--- a/第6章 函数/第6章 函数.md
+++ b/第6章 函数/第6章 函数.md
@@ -1,3 +1,88 @@
+<!-- TOC -->
+
+- [第6章 函数](#第6章-函数)
+  - [6.1 函数基础](#61-函数基础)
+    - [编写函数](#编写函数)
+    - [调用函数](#调用函数)
+    - [函数的形参列表](#函数的形参列表)
+    - [函数返回类型](#函数返回类型)
+    - [6.1.1 局部对象](#611-局部对象)
+      - [自动对象](#自动对象)
+      - [局部静态对象](#局部静态对象)
+    - [6.1.2 函数声明](#612-函数声明)
+      - [在头文件中进行函数声明](#在头文件中进行函数声明)
+    - [6.1.3 分离式编译 (separate compilation)](#613-分离式编译-separate-compilation)
+      - [编译和链接多个源文件](#编译和链接多个源文件)
+  - [6.2 参数传递](#62-参数传递)
+    - [6.2.1 传值参数](#621-传值参数)
+      - [指针形参](#指针形参)
+    - [6.2.2 传引用参数](#622-传引用参数)
+      - [使用引用避免拷贝](#使用引用避免拷贝)
+      - [使用引用形参返回额外信息](#使用引用形参返回额外信息)
+    - [6.2.3 const形参和实参](#623-const形参和实参)
+      - [指针或引用形参与`const`](#指针或引用形参与const)
+      - [尽量使用常量引用](#尽量使用常量引用)
+    - [6.2.4 数组形参](#624-数组形参)
+      - [使用标记指定数组长度](#使用标记指定数组长度)
+      - [使用标准库规范](#使用标准库规范)
+      - [显式传递一个表示数组大小的形参](#显式传递一个表示数组大小的形参)
+      - [数组形参和`const`](#数组形参和const)
+      - [数组引用形参](#数组引用形参)
+      - [传递多维数组](#传递多维数组)
+    - [6.2.5 main：处理命令行选项](#625-main处理命令行选项)
+    - [6.2.6 含有可变形参的函数](#626-含有可变形参的函数)
+      - [`initializer_list` 形参](#initializer_list-形参)
+      - [省略符形参](#省略符形参)
+  - [6.3 返回类型和return语句](#63-返回类型和return语句)
+    - [6.3.1 无返回值函数](#631-无返回值函数)
+    - [6.3.2 有返回值函数](#632-有返回值函数)
+      - [值是如何被返回的](#值是如何被返回的)
+      - [不要返回局部对象的引用或指针](#不要返回局部对象的引用或指针)
+      - [返回类类型的函数和调用运算符](#返回类类型的函数和调用运算符)
+      - [引用返回左值](#引用返回左值)
+      - [列表初始化返回值](#列表初始化返回值)
+      - [主函数`main`的返回值](#主函数main的返回值)
+      - [递归 (recursive function)](#递归-recursive-function)
+    - [6.3.3 返回数组指针](#633-返回数组指针)
+      - [声明一个返回数组引用的函数](#声明一个返回数组引用的函数)
+      - [声明一个返回数组指针的函数](#声明一个返回数组指针的函数)
+      - [使用尾置返回类型](#使用尾置返回类型)
+      - [使用`decltype`](#使用decltype)
+  - [6.4 函数重载 (overloaded)](#64-函数重载-overloaded)
+    - [定义重载函数](#定义重载函数)
+    - [判断两个形参的类型是否相异](#判断两个形参的类型是否相异)
+    - [重载和`const`形参](#重载和const形参)
+    - [`const_cast`和重载](#const_cast和重载)
+    - [调用重载的函数](#调用重载的函数)
+    - [6.4.1 重载与作用域](#641-重载与作用域)
+  - [6.5 特殊用途语言特性](#65-特殊用途语言特性)
+    - [6.5.1 默认实参](#651-默认实参)
+      - [使用默认实参调用函数](#使用默认实参调用函数)
+      - [默认实参声明](#默认实参声明)
+      - [默认实参初始值](#默认实参初始值)
+    - [6.5.2 内联函数和constexpr函数](#652-内联函数和constexpr函数)
+      - [内联函数(inline)可避免函数调用的开销](#内联函数inline可避免函数调用的开销)
+      - [`constexpr`函数](#constexpr函数)
+      - [把内联函数和`constexpr`函数放在头文件内](#把内联函数和constexpr函数放在头文件内)
+    - [6.5.3 调试帮助](#653-调试帮助)
+      - [`assert`预处理宏](#assert预处理宏)
+      - [`NDEBUG`预处理变量](#ndebug预处理变量)
+  - [6.6 函数匹配](#66-函数匹配)
+    - [确定候选函数和可行函数](#确定候选函数和可行函数)
+    - [寻找最佳匹配（如果有的话）](#寻找最佳匹配如果有的话)
+    - [含有多个形参的函数匹配](#含有多个形参的函数匹配)
+    - [6.6.1 实参类型转换](#661-实参类型转换)
+      - [需要类型提升和算术类型转换的匹配](#需要类型提升和算术类型转换的匹配)
+      - [函数匹配和`const`实参](#函数匹配和const实参)
+  - [6.7 函数指针](#67-函数指针)
+    - [使用函数指针](#使用函数指针)
+    - [重载函数的指针](#重载函数的指针)
+    - [函数指针形参](#函数指针形参)
+    - [返回指向函数的指针](#返回指向函数的指针)
+    - [将`auto`和`decltype`用于函数指针类型](#将auto和decltype用于函数指针类型)
+
+<!-- /TOC -->
+
 # 第6章 函数
 
 ## 6.1 函数基础
