--- a/第5章 语句/第5章 语句.md
+++ b/第5章 语句/第5章 语句.md
@@ -1,3 +1,46 @@
+<!-- TOC -->
+
+- [第5章 语句](#第5章-语句)
+  - [5.1 简单语句](#51-简单语句)
+    - [空语句(null statement)](#空语句null-statement)
+    - [复合语句（块）](#复合语句块)
+  - [5.2 语句作用域](#52-语句作用域)
+  - [5.3 条件语句](#53-条件语句)
+    - [5.3.1 `if`语句](#531-if语句)
+      - [使用`if else`语句](#使用if-else语句)
+      - [嵌套`if`语句](#嵌套if语句)
+      - [注意使用花括号](#注意使用花括号)
+      - [悬垂`else` (dangling else)](#悬垂else-dangling-else)
+      - [使用花括号控制执行路径](#使用花括号控制执行路径)
+    - [5.3.2 `switch`语句](#532-switch语句)
+      - [`switch` 内部的控制流](#switch-内部的控制流)
+      - [漏写`break`容易引发缺陷](#漏写break容易引发缺陷)
+      - [`default`标签](#default标签)
+      - [`switch`内部的变量定义](#switch内部的变量定义)
+  - [5.4 迭代语句](#54-迭代语句)
+    - [5.4.1 `while`语句](#541-while语句)
+      - [使用`while`循环](#使用while循环)
+    - [5.4.2 传统的`for`语句](#542-传统的for语句)
+      - [`for`语句头中的多重定义](#for语句头中的多重定义)
+      - [省略`for`语句头的某些部分](#省略for语句头的某些部分)
+        - [省略`init-statement`](#省略init-statement)
+        - [省略`condition`](#省略condition)
+        - [省略`expression`](#省略expression)
+    - [5.4.3 `范围for`语句 (range for statement)](#543-范围for语句-range-for-statement)
+    - [5.4.4 `do while`语句](#544-do-while语句)
+  - [5.5 跳转语句](#55-跳转语句)
+    - [5.5.1 `break`语句](#551-break语句)
+    - [5.5.2 `continue`语句](#552-continue语句)
+    - [5.5.3 `goto`语句](#553-goto语句)
+  - [5.6 `try`语句块和异常处理](#56-try语句块和异常处理)
+    - [5.6.1 `throw`表达式](#561-throw表达式)
+    - [5.6.2 `try`语句块](#562-try语句块)
+      - [编写处理代码](#编写处理代码)
+      - [函数在寻找处理代码的过程中退出](#函数在寻找处理代码的过程中退出)
+    - [5.6.3 标准异常](#563-标准异常)
+
+<!-- /TOC -->
+
 # 第5章 语句
 
 ## 5.1 简单语句
