--- a/第4章 表达式/第4章 表达式.md
+++ b/第4章 表达式/第4章 表达式.md
@@ -1,3 +1,58 @@
+<!-- TOC -->
+
+- [第4章 表达式](#第4章-表达式)
+  - [4.1 基础](#41-基础)
+    - [4.1.1 基本概念](#411-基本概念)
+      - [组合运算符和运算对象](#组合运算符和运算对象)
+      - [运算对象转换](#运算对象转换)
+      - [重载运算符](#重载运算符)
+      - [左值和右值](#左值和右值)
+    - [4.1.2 优先级与结合律](#412-优先级与结合律)
+      - [优先级与结合律有何影响](#优先级与结合律有何影响)
+    - [4.1.3 求值顺序](#413-求值顺序)
+      - [求值顺序、优先级、结合律](#求值顺序优先级结合律)
+  - [4.2 算术运算符](#42-算术运算符)
+  - [4.3 逻辑和关系运算符](#43-逻辑和关系运算符)
+    - [逻辑与和逻辑或运算符](#逻辑与和逻辑或运算符)
+    - [逻辑非运算符](#逻辑非运算符)
+    - [关系运算符](#关系运算符)
+    - [相等性测试与布尔字面值](#相等性测试与布尔字面值)
+  - [4.4 赋值运算符](#44-赋值运算符)
+    - [赋值运算优先级较低](#赋值运算优先级较低)
+    - [切勿混淆相等运算符和赋值运算符](#切勿混淆相等运算符和赋值运算符)
+    - [复合赋值运算符](#复合赋值运算符)
+  - [4.5 递增和递减运算符](#45-递增和递减运算符)
+    - [在一条语句中混用解引用和递增运算符](#在一条语句中混用解引用和递增运算符)
+    - [运算对象可按任意顺序求值](#运算对象可按任意顺序求值)
+  - [4.6 成员访问运算符](#46-成员访问运算符)
+  - [4.7 条件运算符](#47-条件运算符)
+    - [嵌套条件运算符](#嵌套条件运算符)
+    - [在输出表达式中使用条件运算符](#在输出表达式中使用条件运算符)
+  - [4.8 位运算符](#48-位运算符)
+    - [移位运算符](#移位运算符)
+    - [位求反运算符](#位求反运算符)
+    - [位与、位或、位异或运算符](#位与位或位异或运算符)
+    - [使用位运算符](#使用位运算符)
+    - [移位运算符（又叫`IO`运算符）满足左结合律](#移位运算符又叫io运算符满足左结合律)
+  - [4.9 `sizeof`运算符](#49-sizeof运算符)
+  - [4.10 逗号运算符 (comma operator)](#410-逗号运算符-comma-operator)
+  - [4.11 类型转换 (conversion)](#411-类型转换-conversion)
+    - [4.11.1 算术转换 (arithmetic conversion)](#4111-算术转换-arithmetic-conversion)
+      - [整型提升 (integral promotion)](#整型提升-integral-promotion)
+      - [无符号类型的运算对象](#无符号类型的运算对象)
+      - [理解算术转换](#理解算术转换)
+    - [4.11.2 其他隐式类型转换](#4112-其他隐式类型转换)
+    - [4.11.3 显式转换](#4113-显式转换)
+      - [命名的强制类型转换](#命名的强制类型转换)
+        - [static_cast](#static_cast)
+        - [const_cast](#const_cast)
+        - [reinterpret_cast](#reinterpret_cast)
+      - [旧式的强制类型转换](#旧式的强制类型转换)
+  - [4.12 运算符优先级表](#412-运算符优先级表)
+    - [表4.4：运算符优先级](#表44运算符优先级)
+
+<!-- /TOC -->
+
 # 第4章 表达式
 
 - 运算对象(operand)
