--- a/第3章 字符串、向量和数组/第3章 字符串、向量和数组.md
+++ b/第3章 字符串、向量和数组/第3章 字符串、向量和数组.md
@@ -1,3 +1,74 @@
+<!-- TOC -->
+
+- [第3章 字符串、向量和数组](#第3章-字符串向量和数组)
+  - [3.1 命名空间的 using 声明](#31-命名空间的-using-声明)
+    - [头文件不应包含 using 声明](#头文件不应包含-using-声明)
+  - [3.2 标准库类型 string](#32-标准库类型-string)
+    - [3.2.1 定义和初始化`string`对象](#321-定义和初始化string对象)
+      - [直接初始化和拷贝初始化](#直接初始化和拷贝初始化)
+    - [3.2.2 string 对象上的操作](#322-string-对象上的操作)
+      - [使用`getline`读取一整行](#使用getline读取一整行)
+      - [`string::size_type`类型](#stringsize_type类型)
+      - [比较 string 对象](#比较-string-对象)
+      - [字面值和 string 对象相加](#字面值和-string-对象相加)
+    - [3.2.3 处理 string 对象中的字符](#323-处理-string-对象中的字符)
+      - [处理每个字符？使用基于范围的`for`语句](#处理每个字符使用基于范围的for语句)
+      - [使用范围 for 语句改变字符串中的字符](#使用范围-for-语句改变字符串中的字符)
+      - [只处理一部分字符？](#只处理一部分字符)
+      - [使用下标执行迭代](#使用下标执行迭代)
+      - [使用下标执行随机访问](#使用下标执行随机访问)
+  - [3.3 标准库类型 vector](#33-标准库类型-vector)
+    - [3.3.1 定义和初始化 vector 对象](#331-定义和初始化-vector-对象)
+      - [列表初始化`vector`对象 P88](#列表初始化vector对象-p88)
+      - [创建指定数量的元素](#创建指定数量的元素)
+      - [值初始化](#值初始化)
+      - [列表初始值还是元素数量？](#列表初始值还是元素数量)
+    - [3.3.2 向`vector`对象中添加元素](#332-向vector对象中添加元素)
+      - [向`vector`对象添加元素蕴含的编程假定](#向vector对象添加元素蕴含的编程假定)
+    - [3.3.3 其他`vector`操作](#333-其他vector操作)
+      - [计算`vector`内对象的索引](#计算vector内对象的索引)
+      - [不能用下标形式添加元素](#不能用下标形式添加元素)
+  - [3.4 迭代器介绍](#34-迭代器介绍)
+    - [3.4.1 使用迭代器](#341-使用迭代器)
+      - [迭代器运算符](#迭代器运算符)
+      - [将迭代器从一个元素移动到另外一个元素](#将迭代器从一个元素移动到另外一个元素)
+      - [迭代器类型](#迭代器类型)
+      - [`begin`和`end`运算符](#begin和end运算符)
+      - [结合解引用和成员访问操作](#结合解引用和成员访问操作)
+      - [某些对`vector`对象的操作会使迭代器失效](#某些对vector对象的操作会使迭代器失效)
+    - [3.4.2 迭代器运算 (iterator arithmetic)](#342-迭代器运算-iterator-arithmetic)
+      - [迭代器的算术运算](#迭代器的算术运算)
+      - [使用迭代器运算](#使用迭代器运算)
+  - [3.5 数组](#35-数组)
+    - [3.5.1 定义和初始化内置数组](#351-定义和初始化内置数组)
+      - [显式初始化数组元素](#显式初始化数组元素)
+      - [字符数组的特殊性](#字符数组的特殊性)
+      - [不允许拷贝和赋值](#不允许拷贝和赋值)
+      - [理解复杂的数组声明](#理解复杂的数组声明)
+    - [3.5.2 访问数组元素](#352-访问数组元素)
+      - [检查下标的值](#检查下标的值)
+    - [3.5.3 指针和数组](#353-指针和数组)
+      - [指针也是迭代器](#指针也是迭代器)
+      - [标准库函数`begin`和`end`](#标准库函数begin和end)
+      - [指针运算](#指针运算)
+      - [解引用和指针运算的交互](#解引用和指针运算的交互)
+      - [下标和指针](#下标和指针)
+    - [3.5.4 C风格字符串](#354-c风格字符串)
+      - [C 标准库 String 函数](#c-标准库-string-函数)
+      - [比较字符串](#比较字符串)
+      - [目标字符串的大小由调用者指定](#目标字符串的大小由调用者指定)
+    - [3.5.5 与旧代码的接口](#355-与旧代码的接口)
+      - [混用 string 对象和 C风格字符串](#混用-string-对象和-c风格字符串)
+      - [使用数组初始化 vector 对象](#使用数组初始化-vector-对象)
+  - [3.6 多维数组](#36-多维数组)
+    - [多维数组的初始化](#多维数组的初始化)
+    - [多维数组的下表引用](#多维数组的下表引用)
+    - [使用范围 for 语句处理多维数组](#使用范围-for-语句处理多维数组)
+    - [指针和多维数组](#指针和多维数组)
+    - [类型别名简化多维数组的指针](#类型别名简化多维数组的指针)
+
+<!-- /TOC -->
+
 # 第3章 字符串、向量和数组
 
 `string`和`vector`是两种最重要的标准库类型。`string`支持可变长字符串，后者则表示可变长的集合。
