--- a/第2章 变量和基本类型/第2章 变量和基本类型.md
+++ b/第2章 变量和基本类型/第2章 变量和基本类型.md
@@ -1,3 +1,68 @@
+<!-- TOC -->
+
+- [第2章 变量和基本类型](#第2章-变量和基本类型)
+  - [2.1 基本内置类型](#21-基本内置类型)
+    - [2.1.1 算术类型](#211-算术类型)
+      - [带符号类型和无符号类型](#带符号类型和无符号类型)
+    - [2.1.2 类型转换](#212-类型转换)
+      - [含有无符号类型的表达式](#含有无符号类型的表达式)
+    - [2.1.3 字面值常量](#213-字面值常量)
+      - [整型和浮点型字面值](#整型和浮点型字面值)
+      - [字符和字符串字面值](#字符和字符串字面值)
+      - [转义序列](#转义序列)
+      - [布尔字面值和指针字面值](#布尔字面值和指针字面值)
+  - [2.2 变量](#22-变量)
+    - [2.2.1 变量定义](#221-变量定义)
+      - [初始值](#初始值)
+      - [列表初始化](#列表初始化)
+      - [默认初始化](#默认初始化)
+    - [2.2.2 变量声明和定义的关系](#222-变量声明和定义的关系)
+    - [2.2.3 标识符(identifier)](#223-标识符identifier)
+      - [变量命名规范](#变量命名规范)
+    - [2.2.4 名字的作用域](#224-名字的作用域)
+      - [嵌套的作用域](#嵌套的作用域)
+  - [2.3 复合类型(compound type)](#23-复合类型compound-type)
+    - [2.3.1 引用(reference)](#231-引用reference)
+    - [2.3.2 指针(pointer)](#232-指针pointer)
+      - [获取对象的地址](#获取对象的地址)
+      - [指针值](#指针值)
+      - [利用指针访问对象](#利用指针访问对象)
+      - [空指针 (null pointer)](#空指针-null-pointer)
+      - [赋值和指针](#赋值和指针)
+      - [其他指针操作](#其他指针操作)
+      - [void* 指针](#void-指针)
+    - [2.3.3 理解复合类型的声明](#233-理解复合类型的声明)
+      - [定义多个变量](#定义多个变量)
+      - [指向指针的指针](#指向指针的指针)
+      - [指向指针的引用](#指向指针的引用)
+  - [2.4 const 限定符](#24-const-限定符)
+    - [2.4.1 const 的引用](#241-const-的引用)
+    - [2.4.2 指针和 const](#242-指针和-const)
+      - [const 指针](#const-指针)
+    - [2.4.3 顶层 const](#243-顶层-const)
+    - [2.4.4 constexpr 和常量表达式](#244-constexpr-和常量表达式)
+      - [constexpr 变量](#constexpr-变量)
+      - [字面值类型(literal type)](#字面值类型literal-type)
+      - [指针和 constexpr](#指针和-constexpr)
+  - [2.5 处理类型](#25-处理类型)
+    - [2.5.1 类型别名](#251-类型别名)
+      - [指针、常量和类型别名](#指针常量和类型别名)
+    - [2.5.2 auto 类型说明符](#252-auto-类型说明符)
+      - [复合类型、常量和 auto](#复合类型常量和-auto)
+    - [2.5.3 decltype 类型指示符](#253-decltype-类型指示符)
+      - [decltype 和引用](#decltype-和引用)
+  - [2.6 自定义数据结构](#26-自定义数据结构)
+    - [2.6.1 定义`Sales_data`类型](#261-定义sales_data类型)
+      - [类数据成员](#类数据成员)
+    - [2.6.2 使用`Sales_data`类](#262-使用sales_data类)
+      - [添加两个`Salese_data`对象](#添加两个salese_data对象)
+      - [`Salese_data`对象读入数据](#salese_data对象读入数据)
+      - [输出两个`Salese_data`对象的和](#输出两个salese_data对象的和)
+    - [2.6.3 编写自己的头文件](#263-编写自己的头文件)
+      - [预处理概述](#预处理概述)
+
+<!-- /TOC -->
+
 # 第2章 变量和基本类型
 
 ## 2.1 基本内置类型
