--- a/第1章 开始/第1章 开始.md
+++ b/第1章 开始/第1章 开始.md
@@ -1,3 +1,24 @@
+<!-- TOC -->
+
+- [第1章 开始](#第1章-开始)
+  - [1.1 编写一个简单的C++程序](#11-编写一个简单的c程序)
+  - [1.2 初识输入输出](#12-初识输入输出)
+  - [1.3 注释简介](#13-注释简介)
+  - [1.4 控制流](#14-控制流)
+    - [1.4.1 `while` 语句](#141-while-语句)
+    - [1.4.2 `for` 语句](#142-for-语句)
+    - [1.4.3 读取数量不定的输入数据](#143-读取数量不定的输入数据)
+    - [1.4.4 `if` 语句](#144-if-语句)
+  - [1.5 类简介(class)](#15-类简介class)
+    - [1.5.1 Sales_item 类](#151-sales_item-类)
+      - [读写`Sales_item`](#读写sales_item)
+      - [`Sales_item`对象的加法](#sales_item对象的加法)
+    - [1.5.2 初识成员函数](#152-初识成员函数)
+      - [什么是成员函数？](#什么是成员函数)
+  - [1.6 书店程序](#16-书店程序)
+
+<!-- /TOC -->
+
 # 第1章 开始
 
 ## 1.1 编写一个简单的C++程序
