--- a/第6章 函数/第6章 函数.md
+++ b/第6章 函数/第6章 函数.md
@@ -1875,7 +1875,7 @@ inline bool isShorter(const string &s1, const string &s2)
 
 #### `constexpr`函数
 
-**constexpr函数**(constexpr function)是孩子能用于常量表达式的函数。
+**constexpr函数**(constexpr function)是指能用于常量表达式的函数。
 
 要遵循几项约定：
 
