--- a/第7章 类/第7章 类.md
+++ b/第7章 类/第7章 类.md
@@ -68,7 +68,7 @@
       - [`explicit`构造函数只能用于直接初始化](#explicit构造函数只能用于直接初始化)
       - [为转换显式地使用构造函数](#为转换显式地使用构造函数)
       - [标准库中含有显示构造函数的类](#标准库中含有显示构造函数的类)
-    - [7.5.5 聚合类](#755-聚合类)
+    - [7.5.5 聚合类 (aggregate class)](#755-聚合类-aggregate-class)
     - [7.5.6 字面值常量类](#756-字面值常量类)
       - [`constexpr`构造函数](#constexpr构造函数)
   - [7.6 类的静态成员](#76-类的静态成员)
@@ -2288,20 +2288,273 @@ item.combine(static_cast<Sales_data>(cin));
 
 与 `string` 相反，`vector` 接受的单参数是 `int` 类型，这个参数的原意是指定 `vector` 的容量。如果我们在本来需要 `vector` 的地方提供一个 `int` 值并且希望这个 `int` 值自动转换成 `vector`，则这个过程显得比较牵强，因此把 `vector` 的单参数构造函数定义成 `explicit` 的更加合理。
 
-### 7.5.5 聚合类
+### 7.5.5 聚合类 (aggregate class)
+
+聚合类使得用户可以直接访问其成员，并且具有特殊的初始化语法形式。
+当一个类满足如下条件时，我们说它是聚合的：
+
+- 所有成员都是 `public` 的。
+- 没有定义任何构造函数。
+- 没有类内初始值。
+- 没有基类，也没有 `virtual` 函数。
+
+```cpp
+// 下面的类是一个聚合类：
+struct Data {
+    int ival;
+    string s;
+};
+
+// 提供一个花括号括起来的成员初始值列表，并用它初始化聚合类的数据成员
+// val1.ival = 0; val1.s = string("Anna")
+Data val1 = { 0, "Anna" };
+```
+
+**练习7.52：使用 p64 的 Sales_data 类，解释下面的初始化过程。如果存在问题，尝试修改它。**
+
+```cpp
+Sales_data item = {"978-0590353403", 25, 15.99};
+```
+
+【解答】
+
+程序的意图是对 `item` 执行聚合类初始化操作，用花括号内的值初始化 `item` 的数据成员。然而实际过程与程序的愿意不符合，编译器会报错。
+
+这是因为聚合类必须满足一些非常苛刻的条件，其中一项就是没有类内初始值，数据成员 `units_sold` 和 `revenue` 都包含类内初始值。
+
+只要去掉这两个类内初始值，程序就可以正常运行了。
+
+```cpp
+struct Sales_data
+{
+    string bookNo;
+    unsigned units_sold;
+    double revenue;
+};
+```
+
+因为 `Data` 类是聚合类，所以它也是一个字面值常量类。
 
 ### 7.5.6 字面值常量类
 
+`constexpr` 函数的参数和返回值必须是字面值类型。
+
+除了算术类型、引用和指针外，某些类也是字面值类型。
+
+和其他类不同，字面值类型的类可能含有 `constexpr` 函数成员。这样的成员必须符合 `constexpr` 函数的所有要求，它们是隐式 `const` 的。
+
 #### `constexpr`构造函数
+
+一个字面值常量类必须至少提供一个 `constexpr` 构造函数。
+
+字面值常量类是一种非常特殊的类类型，**聚合类**是字面值常量类，**某些类**虽然不是聚合类但在满足书中所提要求的情况下也是字面值常量类。
+
+- 数据成员都必须是字面值类型。
+- 类必须至少含有一个 `constexpr` 构造函数。
+- 如果一个数据成员含有类内初始值，则内置类型成员的初始值必须是一条常量表达式；
+  或者如果成员属于某种类类型，则初始值必须使用成员自己的 `constexpr` 构造函数。
+- 类必须使用析构函数的默认定义，该成员负责销毁类的对象。
+
+```cpp
+class Debug {
+public:
+    constexpr Debug(bool b = true) : hw(b), io(b), other(b) { }
+    constexpr Debug(bool h, bool i, bool o) : hw(h), io(i), other(o) { }
+    constexpr bool any() { return hw || io || other; }
+    void set_io(bool b) { io = b; }
+    void set_hw(bool b) { hw = b; }
+    void set_other(bool b) { hw = b; }
+private:
+    bool hw;    // 硬件错误，而非 IO 错误
+    bool io;    // IO 错误
+    bool other; // 其他错误
+};
+```
+
+`constexpr` 构造函数用于生成 `constexpr` 对象以及 `constexpr` 函数的参数或返回类型：
+
+```cpp
+constexpr Debug io_sub(false, true, false);     // 调试 IO
+if (io_sub.any())                               // 等价于 if(true)
+    cerr << "print appropriate error messages" << endl;
+constexpr Debug prod(false);                    // 无调试
+if (prod.any())                                 // 等价于 if(false)
+    cerr << "print an error message" << endl;
+```
+
+**练习7.54：`Debug` 中以 `set_` 开头的成员应该被声明成 `constexpr` 吗？如果不，为什么？**
+
+【解答】
+这些以 `set_` 开头的成员不能声明成 `constexpr`，这些函数的作用是设置数据成员的值，而 `constexpr` 函数只能包含 `return` 语句，不允许执行其他任务。
+
+具体分析 p268：
+
+`constexpr` 构造函数可以声明成 `=default` 的形式（或者是删除函数的形式）。
+否则，`constexpr` 构造函数就必须既符合构造函数的要求（意味着不能包含返回语句），又符合 `constexpr` 函数的要求（意味着它能拥有的唯一可执行语句就是返回语句）。
+
+综合这两点可知，constexpr 构造函数体一般来说应该是空的。
+我们通过前置关键字 `constexpr` 就可以声明一个 `constexpr` 构造函数了：
 
 ## 7.6 类的静态成员
 
+有时候类需要它的一些成员与类本身直接相关，而不是与类的各个对象保持关联。
+
 ### 声明静态成员
+
+我们通过在成员的声明之前加上关键字 `static` 使得其与类关联在一起。
+和其他成员一样，静态成员可以是 `public` 的或 `private` 的。
+静态数据成员的类型可以是常量、引用、指针、类类型等。
+
+```cpp
+class Account {
+public:
+    void calculate() { amount += amount * interestRate; }
+    static double rate() { return interestRate; }
+    static void rate (double);
+private:
+    std::string owner;
+    double amount;
+    static double iterestRate;
+    static double initRate();
+};
+```
+
+每个 `Account` 对象将包含两个数据成员：`owner` 和 `amount`。只存在一个 `interestRate` 对象而且它被所有 `Account` 对象共享。
+
+静态成员函数不包含 `this` 指针。作为结果，静态成员函数不能声明成 `const` 的，而且我们也不能在 `static` 函数体内使用 `this` 指针。
+
+**练习7.57：编写你自己的 Account 类。**
+
+```cpp
+/* 练习7.57：编写你自己的 Account 类。
+
+【解答】如果类的某些（某个）成员从逻辑上来说更应该与类本身关联，而不是与类的具体对象关联，则我们应该把这种成员声明成静态的。
+在 Account 类中，很明显利率是相对稳定和统一的，应该是静态成员；
+而开户人以及它的储蓄额则与对象息息相关，不能是静态的。*/
+
+class Account
+{
+private:
+    string strName;
+    double dAmount = 0.0;
+    static double dRate;
+};
+```
 
 ### 使用类的静态成员
 
+我们使用作用域运算符直接访问静态成员：
+
+```cpp
+double r;
+r = Account::rate();    // 使用作用域运算符访问静态成员
+```
+
+虽然静态成员不属于类的某个对象，但是我们仍然可以使用类的对象、引用或者指针来访问静态成员：
+
+```cpp
+Account ac1;
+Account *ac2 = &ac1;
+// 调用静态成员函数 rate 的等价形式
+r = ac1.rate();     // 通过 Account 的对象或引用
+r = ac2->rate();    // 通过指向 Account 对象的指针
+```
+
+成员函数不用通过作用域运算符就能直接使用静态成员：
+
+```cpp
+class Account {
+public:
+    void calculate() { amount += amount * interestRate; }
+private:
+    static double itnerestRate;
+    // 其他成员与之前的版本一致
+};
+```
+
 ### 定义静态成员
+
+Note: 和类的所有成员一样，当我们指向类外部的静态成员时，必须指明成员所属的类名。`static` 关键字则只出现在类内部的声明语句中。
+
+```cpp
+void Account::rate(double newRate)
+{
+    interestRate = newRate;
+}
+```
+
+静态数据成员不属于类的任何一个对象，它们不是由类的构造函数初始化的。
+我们不能在类的内部初始化静态成员。相反的，必须在类的外部定义和初始化每个静态成员。
+
+类似于全局变量，静态数据成员定义在任何函数之外。因此一旦它被定义，就将一直存在于程序的整个生命周期中。
+
+```cpp
+// 定义并初始化一个静态成员
+// 类型名、类名、作用域运算符、成员自己的名字
+double Account::interestRate = initRate();
+```
 
 ### 静态成员的类内初始化
 
+```cpp
+// 例如：我们可以用一个初始化了的静态数据成员指定数组成员的维度
+class Account {
+public:
+    static double rate() { return interestRate; }
+    static void rate(double);
+private:
+    static constexpr int period = 30;       // period 是常量表达式
+    double daily_tbl[period];
+}
+
+// 一个不带初始值的静态成员的定义
+constexpr int Account::period;              // 初始值在类的定义内提供
+```
+
+通常情况下，类的静态成员不应该在类的内部初始化。然而，我们可以为静态成员提供 `const` 整数类型的类内初始值，不过要求静态成员必须是字面值常量类型的 `constexpr`。
+
+注意：即使一个常量静态数据成员在类内部被初始化了，通常情况下也应该在类的外部定义一下该成员。
+
 ### 静态成员能用于某些场景，而普通成员不能
+
+区别一：
+静态数据成员的类型可以就是它所属的类类型。
+而非静态数据成员则受到限制，只能声明成它所属类的指针或引用：
+
+```cpp
+class Bar {
+public:
+    // ...
+private:
+    static Bar mem1;    // 正确：静态成员可以是不完全类型
+    Bar *mem2;          // 正确：指针成员可以是不完全类型
+    Bar mem3;           // 错误：数据成员必须是完全类型
+};
+```
+
+区别二：
+静态成员和普通成员的的另外一个区别是我们可以使用静态成员作为默认实参。
+非静态数据成员不能作为默认实参，因为它的值本身属于对象的一部分，这么做的结果是无法真正提供一个对象以便从中获取成员的值，最终将引发错误。
+
+```cpp
+class Screen {
+public:
+    // bkground 表示一个在类中稍后定义的静态成员
+    Screen& clear(char = bkground);
+private:
+    static const char bkground'
+}
+```
+
+**练习7.55：什么是类的静态成员？它有何优点？静态成员与普通成员有何区别？**
+
+静态成员是指声明语句之前带有关键字 `static` 的类成员，静态成员不是任意单独对象的组成部分，而是由该类的全体对象所共享。
+
+静态成员的优点包括：作用域位于类的范围之内，避免与其他类的成员或者全局作用域的名字冲突；
+可以是私有成员，而全局对象不可以；
+通过阅读程序可以非常容易地看出静态成员与特定类关联，使得程序的含义清晰明了。
+
+静态成员与普通成员的区别主要体现在：
+普通成员与类的对象关联，是某个具体对象的组成部分；
+而静态成员不从属于任何具体的对象，它由该类的所有对象共享。
+另外，还有一个细微的区别，静态成员可以作为默认实参，而普通数据成员不能作为默认实参。
