--- a/第7章 类/第7章 类.md
+++ b/第7章 类/第7章 类.md
@@ -2511,6 +2511,48 @@ private:
 constexpr int Account::period;              // 初始值在类的定义内提供
 ```
 
+**练习7.58：下面的静态数据成员的声明和定义有错误吗？请解释原因。**
+
+```cpp
+/* 练习7.58：下面的静态数据成员的声明和定义有错误吗？请解释原因。*/
+
+// example.h
+class Example {
+public:
+    static double rate = 6.5;
+    static const int vecSize = 20;
+    static vector<double> vec(vecSize);
+};
+
+// example.C
+#include "example.h"
+double Example::rate;
+vector<double> Example::vec;
+
+
+/*【出题思路】本题旨在考察静态成员的用法。
+
+【解答】本题的程序存在以下几处错误：
+在类的内部，rate 和 vec 的初始化是错误的，因为除了静态常量成员之外，其他静态成员不能再类的内部初始化。
+
+另外，example.c 文件的两条语句也是错误的，因为在这里我们必须给出静态成员的初始值。*/
+
+// example.h
+class Example {
+public:
+    double rate;
+    static const int vecSize = 20;
+    vector<double> vec;
+};
+
+// example.C
+#include "example.h"
+double Example::rate = 6.5;
+vector<double> Example::vec(vecSize);
+
+// 上面修改的是自己写的，不知道对不对？
+```
+
 通常情况下，类的静态成员不应该在类的内部初始化。然而，我们可以为静态成员提供 `const` 整数类型的类内初始值，不过要求静态成员必须是字面值常量类型的 `constexpr`。
 
 注意：即使一个常量静态数据成员在类内部被初始化了，通常情况下也应该在类的外部定义一下该成员。
