--- a/第3章 字符串、向量和数组.md
+++ b/第3章 字符串、向量和数组.md
@@ -1198,7 +1198,7 @@ while (mid != end && *mid != sought) {
 解答：
 C++并没有定义两个迭代器的加法运算，实际上直接把两个迭代器加起来是没有意义的。
 
-与之相反，C++定义了迭代器的检法运算，两个跌大气相减的结果是它们之间的距离，也就是说，将运算符右侧的迭代器向前移动多少个元素后可以得到左侧的迭代器，参与运算的两个跌大气必须指向同一个容器中的元素或尾后元素。
+与之相反，C++定义了迭代器的检法运算，两个迭代器相减的结果是它们之间的距离，也就是说，将运算符右侧的迭代器向前移动多少个元素后可以得到左侧的迭代器，参与运算的两个迭代器必须指向同一个容器中的元素或尾后元素。
 
 另外，C++还定义了迭代器与整数的加减法运算，用以控制迭代器在容器中左右移动。
 
