第9章 顺序容器

--- a/第9章 顺序容器.md
+++ b/第9章 顺序容器.md
@@ -10,8 +10,12 @@
       - [迭代器范围](#迭代器范围)
       - [使用左闭合范围蕴含的变成假定](#使用左闭合范围蕴含的变成假定)
     - [9.2.2 容器类型成员](#922-容器类型成员)
-    - [9.2.3 begin和end成员](#923-begin和end成员)
+    - [9.2.3 `begin`和`end`成员](#923-begin和end成员)
     - [9.2.4 容器定义和初始化](#924-容器定义和初始化)
+      - [将一个容器初始化为另一个容器的拷贝](#将一个容器初始化为另一个容器的拷贝)
+      - [列表初始化](#列表初始化)
+      - [与顺序容器大小相关的构造函数](#与顺序容器大小相关的构造函数)
+      - [标准库`array`具有固定大小](#标准库array具有固定大小)
     - [9.2.5 赋值和swap](#925-赋值和swap)
     - [9.2.6 容器大小操作](#926-容器大小操作)
     - [9.2.7 关系运算符](#927-关系运算符)
@@ -241,15 +245,217 @@ int main()
 }
 ```
 
+**练习9.5：重写上一题的函数，返回一个迭代器指向找到的元素。注意，程序必须处理未找到给定值的情况。**
 
+```cpp
+/* 练习9.5：重写上一题的函数，返回一个迭代器指向找到的元素。
+注意，程序必须处理未找到给定值的情况。*/
+
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+vector<int>::iterator search_vec(vector<int>::iterator beg, vector<int>::iterator end, int val)
+{
+    for (; beg != end; beg++)   // 遍历范围
+        if (*beg == val)        // 检查是否与给定值相等
+            return beg;         // 搜索成功，返回元素对应迭代器
+    return end;                 // 搜索失败，返回尾后迭代器
+}
+
+int main()
+{
+    vector<int> ilist = {1, 2, 3, 4, 5, 6, 7};
+
+    cout << search_vec(ilist.begin(), ilist.end(), 3) - ilist.begin() << endl;
+    cout << search_vec(ilist.begin(), ilist.end(), 8) - ilist.begin() << endl;
+
+    return 0;
+}
+```
+
+**练习9.6：下面程序有何错误？你应该如何修改它？**
+
+```cpp
+list<int> lst1;
+list<int>::iterator iter1 = lst1.begin(), iter2 = lst1.end();
+while (iter1 < iter2) /* ...*/
+```
+
+【出题思路】
+理解不同类型容器的迭代器之间的差别，更深层次的，理解数据结构的实现如何导致迭代器的差别。 
+
+【解答】
+与`vector`和`deque`不同，`list`的迭代器不支持`＜`运算，只支持递增、递减、 `==`以及`!=`运算。
+
+原因在于这几种数据结构实现上的不同。`vector`和`deque`将元素在内存中连续保存，而`list`则是将元素以链表方式存储，因此前者可以方便地实现迭代器的大小比较（类似指针的大小比较）来体现元素的前后关系。而在`list`中，两个指针的大小关系与它们指向的元素的前后关系并不一定是吻合的，实现`<`运算将会非常困难和低效。
 
 ### 9.2.2 容器类型成员
 
-### 9.2.3 begin和end成员
+每个容器都定义了多个**类型**，如 `size_type`、`iterator` 和 `const_iterator`。
+
+除了已经使用过的**迭代器类型**，大多数容器还提供反向迭代器。反向迭代器就是一种反向遍历容器的迭代器，与正向迭代器相比，各种操作的含义也都发生了颠倒。例如，对一个反向迭代器执行`++`操作，会得到上一个元素。
+
+类型别名，我们可以在不了解容器中元素类型的情况下使用它。如果需要元素类型，可以使用容器的`value_type`。如果需要元素类型的一个引用，可以使用`reference`或`const_reference`。
+
+```cpp
+// 为了使用这些类型，我们必须显式使用其类名：
+// iter 是通过 list<string> 定义的一个迭代器类型
+list<string>::iterator iter;
+// count 是通过 vector<int> 定义的一个 difference_type 类型
+vector<int>::difference_type count;
+```
+
+**练习9.7：为了索引 `int` 的 `vector` 中的元素，应该使用什么类型？**
+
+【出题思路】标准库容器定义了若干类型成员，对应容器使用中可能涉及的类型，如迭代器、元素引用等。
+
+【解答】使用迭代器类型 `vector<int>::iterator` 来索引`int`的`vector`中的元素。
+
+**练习9.8：为了读取`string`的`list`中的元素，应该使用什么类型？如果写入`list`，又该使用什么类型？**
+
+【解答】
+为了读取`string`的`list`中的元素，应使用`list<string>::value_type`，因为`value_type`表示元素类型。
+
+为了写入数据，需要（非常量）引用类型，因此应使用`list<string>::reference`。
+
+### 9.2.3 `begin`和`end`成员
+
+`begin`和`enc`有多个版本：带`r`的版本返回反向迭代器；以`c`开头的版本则返回`const`迭代器：
+
+```cpp
+list<string> a = {"Milton", "Shakespeare", "Austen"};
+auto it1 = a.begin();   // list<string>::iterator
+auto it2 = a.rbegin();  // list<string>::reverse_iterator
+auto it3 = a.cbegin();  // list<string>::const_iterator
+auto it4 = a.crbegin(); // list<string>::const_reverse_iterator
+```
+
+不以 `c` 开头的函数都是被重载过的。也就是说，实际上有两个名为`begin`的成员。
+一个是`const`成员，返回容器的`const_iterator`类型。另一个是非常量成员，返回容器的`iterator`类型。`rbegin`、`en`和`rend`的情况类似。当我们对一个非常量对象调用这些成员时，得到的是返回 `iterator`的版本。只有在对一个`const`对象调用这些函数时，才会得到一个`const`版本。
+
+```cpp
+// 显式指定类型
+list<string>::iterator it5 = a.begin();
+list<string>::const_iterator it6 = a.begin();
+// 是 iterator 还是 const_iterator 依赖于 a 的类型
+auto it7 = a.begin();   // 仅当 a 是 const 时，it7 是 const_iterator
+auto it8 = a.cbegin();  // it8 是 const_iterator
+```
+
+**练习9.9：`begin`和`cbegin`两个函数有什么不同？**
+
+`cbegin` 是C++新标准引入的，用来与 `auto` 结合使用。
+它返回指向容器第一个元素的 `const` 代器，可以用来只读地访问容器元素，但不能对容器元素进行修改。因此，当不需要写访问时，应该使用 `cbegin`。
+
+`begin` 则是被重载过的，有两个版本：其中一个是 `const` 成员函数，也返回 `const` 迭代器：另一个则返回普通迭代器，可以对容器元索进行修改。
 
 ### 9.2.4 容器定义和初始化
 
+| 表9.3：                                                 | 容器定义和初始化                                             |
+| ------------------------------------------------------- | ------------------------------------------------------------ |
+| `C c`                                                   | 默认构造函数，如果`C`是一个`array`，则`c`中元素按默认方式初始化，否则`c`为空 |
+| `C c1(c2)`<br />`C c1=c2`                               | `c1`初始化为`c2`的拷贝，`c1`和`c2`必须是相同类型（即，它们必须是相同的容器类型，且保存的是相同的元素类型；对于`array`类型，两者还必须具有相同大小） |
+| `C c{a, b, c...}`<br />`C c={a, b, c...}`               | `c`初始化为初始化列表中元素的拷贝，列表中元素的类型必须与`c`的元素类型相容。<br />对于`array`类型，列表中元素数目必须等于或小于`array`的大小，任何遗漏的元素都进行值初始化 |
+| `C c(b, e)`                                             | `c`初始化为迭代器`b`和`e`指定范围中的元素的拷贝。范围中元素的类型必须与`c`的元素类型相容。 |
+| 只有顺序容器（不包括`array`）的构造函数才能接受大小参数 |                                                              |
+| `C seq(n)`                                              | `seq`包含`n`个元素，这些元素进行了值初始化；此构造函数是`explicit`的 |
+| `C seq(n, t)`                                           | `seq`包含`n`个初始化为值`t`的元素                            |
+
+#### 将一个容器初始化为另一个容器的拷贝
+
+将一个新容器创建为另一个容器的拷贝的方法有两种：
+
+- 可以直接拷贝整个容器
+- 拷贝由一个迭代器对指定的元素范围
+
+为了创建一个容器为另一个容器的拷贝，两个容器的类型及其元素类型必须匹配。
+不过，当传递迭代器参数来拷贝一个范围时，就不要求容器类型是相同的了。
+而且，新容器和元容器中的元素类型也可以不同，只要能将要拷贝的元素转换为要初始化的容器的元素类型即可。
+
+Note: 当将一个容器**初始化**为另一个容器的拷贝时，两个容器的容器类型和元素类型都必须相同。
+
+```cpp
+// 每个容器有三个元素，用给定的初始化器进行初始化
+list<string> authors = {"Milton", "Shakespeare", "Austen"};
+vector<const char*> articles = {"a", "an", "the"};
+
+list<string> list2(authors);        // 正确：类型匹配
+deque<string> authList(authors);    // 错误：容器类型不匹配
+vector<string> words(articles);     // 错误：元素类型必须匹配
+// 正确：可以将 const char* 元素转换为 string
+forward_list<string> words(articles.begin(), articles.end());
+```
+
+由于两个迭代器表示一个范围，因此可以使用这种构造函数来拷贝一个容器中的子序列。
+例如，假定迭代器`it`表示`authors`中的一个元素，我们可以编写如下代码：
+
+```cpp
+// 拷贝元素，直到（但不包括）it 指向的元素
+deque<string> authList(authors.begin(), it);
+```
+
+#### 列表初始化
+
+我们可以对一个容器进行列表初始化：
+
+```cpp
+// 每个容器有三个元素，用给定的初始化器进行初始化
+list<string> authors = {"Milton", "Shakespeare", "Austen"};
+vector<const char*> articles = {"a", "an", "the"};
+```
+
+#### 与顺序容器大小相关的构造函数
+
+顺序容器接受一个容器大小和一个（可选的）元素初始值。
+如果我们不提供元素初始值，则标准库会创建一个值初始化器：
+
+```cpp
+vector<int> ivec(10, -1);       // 10 个 int 元素，每个都初始化为 -1
+list<string> svec(10, "hi!");   // 10 个 strings; 每个都初始化为 "hi!"
+forward_list<int> ivec(10);     // 10 个元素，每个都初始化为 0
+deque<string> svec(10);         // 10 个元素，每个都是空 string
+```
+
+Note: 只有顺序容器的构造函数才接受大小参数，关联容器并不支持。
+
+#### 标准库`array`具有固定大小
+
+当定义一个`array`时，除了制定元素类型，还要指定容器大小：
+
+```cpp
+array<int, 42>      // 类型为：保存 42 个 int 的数组
+array<string, 10>   // 类型为：保存 10 个 string 的数组
+```
+
+为了使用`array`类型，我们必须同时指定元素类型和大小，大小是`array`类型的一部分：
+
+```cpp
+array<int, 10>::size_type i;    // 数组类型包括元素类型和大小
+array<int>::size_type j;        // 错误：array<int> 不是一个类型
+```
+
+如果元素类型是一个类类型，那么该类必须有一个默认构造函数，以使值初始化能够进行：
+
+```cpp
+array<int, 10> ia1;         // 10 个默认初始化的 int
+array<int, 10> ia2 = {0,1,2,3,4,5,6,7,8,9}; // 列表初始化
+array<int, 10> ia3 = {42};  // ia3[0] 为 42，剩余元素为 0
+```
+
+值得注意的是，虽然我们不能对内置数组类型进行拷贝或对象赋值操作，但`array`并无此限制：
+
+```cpp
+int digs[10] = {0,1,2,3,4,5,6,7,8,9};
+int cpy[10] = digs;             // 错误：内置数组不支持拷贝或赋值
+array<int, 10> digits = {0,1,2,3,4,5,6,7,8,9};
+array<int, 10> copy = digits;   // 正确：只要数组类型匹配即合法
+```
+
 ### 9.2.5 赋值和swap
+
+
 
 ### 9.2.6 容器大小操作
 
