第9章 顺序容器

--- a/第9章 顺序容器.md
+++ b/第9章 顺序容器.md
@@ -374,7 +374,11 @@ auto it8 = a.cbegin();  // it8 是 const_iterator
 不过，当传递迭代器参数来拷贝一个范围时，就不要求容器类型是相同的了。
 而且，新容器和元容器中的元素类型也可以不同，只要能将要拷贝的元素转换为要初始化的容器的元素类型即可。
 
-Note: 当将一个容器**初始化**为另一个容器的拷贝时，两个容器的容器类型和元素类型都必须相同。
+**练习9.12：对于接受一个容器创建其拷贝的构造函数，和接受两个迭代器创建拷贝的构造函数，解释它们的不同。**
+
+接受一个已有容器的构造函数会拷贝此容器中的所有元素，这样，初始化完成后，我们得到此容器的一个一模一样的拷贝。当我们确实需要一个**容器的完整拷贝**时，这种初始化方式非常方便。
+
+但当我们不需要已有容器中的全部元素，而只是想拷贝其中一部分元素时，可使用接受**两个迭代器**的构造函数。传递给它要拷贝的范围的起始和尾后位置的迭代器，即可令新容器对象包含所需范围中元素的拷贝。
 
 ```cpp
 // 每个容器有三个元素，用给定的初始化器进行初始化
@@ -388,12 +392,43 @@ vector<string> words(articles);     // 错误：元素类型必须匹配
 forward_list<string> words(articles.begin(), articles.end());
 ```
 
+Note: 当将一个容器**初始化**为另一个容器的拷贝时，两个容器的容器类型和元素类型都必须相同。
+
 由于两个迭代器表示一个范围，因此可以使用这种构造函数来拷贝一个容器中的子序列。
 例如，假定迭代器`it`表示`authors`中的一个元素，我们可以编写如下代码：
 
 ```cpp
 // 拷贝元素，直到（但不包括）it 指向的元素
 deque<string> authList(authors.begin(), it);
+```
+
+**练习9.11：对 6 种创建和初始化 vector 对象的方法，每一种都给出一个实例。解释每个 vector 包含什么值。**
+
+```cpp
+/* 练习9.11：对 6 种创建和初始化 vector 对象的方法，每一种都给出一个实例。解释每个 vector 包含什么值。*/
+
+(1) vector<int> ilist1; // 默认初始化
+
+(2) vector<int> ilist2(ilist); // ilist2 初始化为 ilist 的拷贝
+
+    vector<int> ilist2_1 = ilist;   // 等价方式
+
+(3) vector<int> ilist = {1, 2, 3.0, 4, 5, 6, 7}; // ilist 初始化为列表中元素的拷贝
+    vector<int> ilist{1, 2, 3.0, 4, 5, 6, 7};   // 等价方式
+
+(4) vector<int> ilist(ilist.begin() + 2, ilist.end() - 1);
+
+/* ilist3 初始化为两个迭代器指定范围中的元素的拷贝，范围中的元素类型必须与 ilist3 的元素类型相容，在本例中 ilist3 被初始化为 {3, 4, 5, 6}。
+
+注意，由于只要求范围中元素类型鱼待初始化的容器的元素类型相容，因此，迭代器来自于不同类型的容器是可能的，例如，用一个 double 的 list 的范围来初始化 ilist3 是可行的。
+
+另外，由于构造函数只是读取范围中的元素并进行拷贝，因此使用普通迭代器还是 const 迭代器来指出范围并无区别。
+
+这种初始化方法特别适合于获取一个序列的子序列。*/
+
+(5) vector<int> ilist4(7); // 默认值初始化
+
+(6) vector<int> ilist5(7, 3); // 指定值初始化
 ```
 
 #### 列表初始化
