--- a/第9章 顺序容器.md
+++ b/第9章 顺序容器.md
@@ -17,10 +17,19 @@
       - [与顺序容器大小相关的构造函数](#与顺序容器大小相关的构造函数)
       - [标准库`array`具有固定大小](#标准库array具有固定大小)
     - [9.2.5 赋值和swap](#925-赋值和swap)
+      - [使用 `assign`（仅顺序容器）](#使用-assign仅顺序容器)
+      - [使用 `swap`](#使用-swap)
     - [9.2.6 容器大小操作](#926-容器大小操作)
     - [9.2.7 关系运算符](#927-关系运算符)
+      - [容器的关系运算符使用元素的关系运算符完成比较](#容器的关系运算符使用元素的关系运算符完成比较)
   - [9.3 顺序容器操作](#93-顺序容器操作)
     - [9.3.1 向顺序容器添加元素](#931-向顺序容器添加元素)
+      - [使用`push_back`](#使用push_back)
+      - [使用`push_front`](#使用push_front)
+      - [在容器中的特定位置添加元素](#在容器中的特定位置添加元素)
+      - [插入范围内元素](#插入范围内元素)
+      - [使用`insert`的返回值](#使用insert的返回值)
+      - [使用`emplace`操作](#使用emplace操作)
     - [9.3.2 访问元素](#932-访问元素)
     - [9.3.3 删除元素](#933-删除元素)
     - [9.3.4 特殊的forward_list操作](#934-特殊的forward_list操作)
@@ -371,8 +380,8 @@ auto it8 = a.cbegin();  // it8 是 const_iterator
 - 拷贝由一个迭代器对指定的元素范围
 
 为了创建一个容器为另一个容器的拷贝，两个容器的类型及其元素类型必须匹配。
-不过，当传递迭代器参数来拷贝一个范围时，就不要求容器类型是相同的了。
-而且，新容器和元容器中的元素类型也可以不同，只要能将要拷贝的元素转换为要初始化的容器的元素类型即可。
+**不过，当传递迭代器参数来拷贝一个范围时，就不要求容器类型是相同的了。**
+**而且，新容器和元容器中的元素类型也可以不同，只要能将要拷贝的元素转换为要初始化的容器的元素类型即可。**
 
 **练习9.12：对于接受一个容器创建其拷贝的构造函数，和接受两个迭代器创建拷贝的构造函数，解释它们的不同。**
 
@@ -429,6 +438,54 @@ deque<string> authList(authors.begin(), it);
 (5) vector<int> ilist4(7); // 默认值初始化
 
 (6) vector<int> ilist5(7, 3); // 指定值初始化
+```
+
+**练习9.13：如何从一个 `list<int>` 初始化一个 `vector<double>`？从一个 `vector<int>` 又该如何创建？编写代码验证你的答案。**
+
+```cpp
+/* 练习9.13：如何从一个 `list<int>` 初始化一个 `vector<double>`？
+从一个 `vector<int>` 又该如何创建？编写代码验证你的答案。
+
+【出题思路】更深入地理解容器拷贝初始化和范围初始化两种方式的差异。
+
+【解答】
+由于 `list<int>` 与 `vector<double>` 是不同的容器类型，因此无法采用容器拷贝初始化方式。
+但前者的元素类型是 `int`，与后者的元素类型 `double` 是相容的，因此可以采用范围初始化方式来构造一个 `vector<double>`，令它的元素值与 `list<int>`完全相同。*/
+
+#include <iostream>
+#include <vector>
+#include <list>
+
+using namespace std;
+
+int main()
+{
+    list<int> ilist = {1, 2, 3, 4, 5, 6, 7};
+    vector<int> ivec = {7, 6, 5, 4, 3, 2, 1};
+
+    // 容器类型不同，不能使用拷贝初始化
+    // vector<double> ivec(ilist);
+
+    /* 元素类型相容，因此可采用范围初始化 */
+    vector<double> dvec(ilist.begin(), ilist.end());
+
+    // 元素类型不同，不能使用拷贝初始化
+    // vector<double> dvec1(ivec);
+
+    /* 元素类型相容，因此可采用范围初始化 */
+    vector<double> dvec1(ivec.begin(), ivec.end());
+
+    cout << dvec.capacity() << " " << dvec.size() << " " << dvec[0] << " " << dvec[dvec.size() - 1] << endl;
+
+    cout << dvec1.capacity() << " " << dvec1.size() << " " << dvec1[0] << " " << dvec1[dvec1.size() - 1] << endl;
+
+    return 0;
+}
+
+/*Output:
+7 7 1 7
+7 7 7 1
+*/
 ```
 
 #### 列表初始化
@@ -490,15 +547,469 @@ array<int, 10> copy = digits;   // 正确：只要数组类型匹配即合法
 
 ### 9.2.5 赋值和swap
 
+与内置数组不同，标准库`array`类型允许赋值。赋值号左右两边的运算对象必须具有相同的类型：
 
+```cpp
+array<int, 10> a1 = {0,1,2,3,4,5,6,7,8,9};
+array<int, 10> a2 = {0};    // 所有元素值均为 0
+a1 = a2;    // 替换 a1 中的元素
+a2 = {0};   // 错误：不能讲一个花括号列表赋予数组
+```
+
+由于右边运算对象的大小可能与左边运算对象的大小不同，因此`array`类型不支持`assign`，也不允许用花括号包围的值列表进行复制。
+
+| 表9.4：                               | 容器赋值运算                                                 |
+| ------------------------------------- | ------------------------------------------------------------ |
+| `c1=c2`                               | 将`c1`中的元素替换为`c2`中元素的拷贝，`c1`和`c2`必须具有相同的类型 |
+| `c={a,b,c...}`                        | 将`c1`中元素替换为初始化列表中元素的拷贝（`array`不适用）    |
+| `swap(c1,c2)`                         | 交换`c1`和`c2`中的元素，`c1`和`c2`必须具有相同的类型         |
+| `c1.swap(c2)`                         | `swap`通常比从`c2`向`c1`拷贝元素快得多                       |
+| `assign`操作不适用于关联容器和`array` |                                                              |
+| `seq.assign(b,e)`                     | 将`seq`中的元素替换为迭代器`b`和`e`所表示的范围中的元素，迭代器`b`和`e`不能指向`seq`中的元素 |
+| `seq.assign(il)`                      | 将`seq`中的元素替换为初始化列表`il`中的元素                  |
+| `seq.assign(n, t)`                    | 将`seq`中的元素替换为`n`个值为`t`的元素                      |
+
+**WARNING**: 赋值相关运算会导致指向左边容器内部的迭代器、引用和指针失效。而`swap`操作将容器内容交换不会导致指向容器的迭代器、引用和指针失效（容器类型为`array`和`string`的情况除外）。
+
+#### 使用 `assign`（仅顺序容器）
+
+我们可以用`assign`实现将一个`vector`中的一段`char*`值赋予一个`list`中的`string`：
+
+```cpp
+list<string> names;
+vector<const char*> oldstyle;
+names = oldstyle;   // 错误：容器类型不匹配
+// 正确：可以将 const char* 转换为 string
+names.assign(oldstyle.cbegin(), oldstyle.cend());
+```
+
+这段代码中对`assign`的调用将`names`中的元素替换为迭代器指定的范围中的元素的拷贝。`assign`的参数决定了容器中将有多少个元素以及它们的值都是什么。
+
+`assign`的第二个版本，用指定书目且具有相同给定值的元素替换容器中原有的元素：
+
+```cpp
+// 等价于 slist1.clear();
+// 后跟 slist1.insert(slist1.begin(), 10, "Hiya!");
+list<string> slist1(1);     // 1 个元素，为空 string
+slist1.assign(10, "Hiya!"); // 10 个元素，每个都是 "Hiya!"
+```
+
+**练习9.14：编写程序，将一个`list`中的`char*`指针（指向C风格字符串）元素赋值给一个`vector`中的`string`。**
+
+```cpp
+/* 练习9.14：编写程序，将一个`list`中的`char*`指针（指向C风格字符串）元素赋值给一个`vector`中的`string`。
+
+【出题思路】
+容器有多种赋值操作，本题帮助读者理解不同赋值方式的差异。
+
+【解答】
+由于 list<char*> 与 vector<string> 是不同类型的容器，因此无法采用赋值运算符 `=` 来进行元素赋值。
+但 char* 可以转换为 string，因此可以采用范围赋值方式来实现本题要求。*/
+
+#include <iostream>
+#include <vector>
+#include <list>
+
+using namespace std;
+
+int main()
+{
+    list<char *> slist = {"hello", "world", "!"};
+    vector<string> svec;
+
+    // 容器类型不同，不能直接赋值
+    // svec = slist;
+
+    /*元素类型相容，可以采用范围赋值*/
+    svec.assign(slist.begin(), slist.end());
+
+    cout << svec.capacity() << " " << svec.size() << " " << svec[0] << " " << svec[svec.size()-1] << endl;
+
+    return 0;
+}
+
+// Output: 3 3 hello !
+```
+
+#### 使用 `swap`
+
+```cpp
+vector<string> svec1(10);   // 10 个元素的 vector
+vector<string> svec2(24);   // 24 个元素的 vector
+swap(svec1, svec2);
+```
+
+调用`swap`后，`svec1`将包含`24`个`string`元素，`svec2`将包含`10`个`string`。除`array`外，交换两个容器内容的操作保证会很快——元素本身并未交换 / 元素不会被移动，`swap`只是交换了两个容器的内部数据结构。
+
+Note: 除`array`外，`swap`不对任何元素进行拷贝、删除或插入操作，因此可以保证在常数时间内完成。
+
+元素不会被移动的事实意味着，除`string`外，指向容器的迭代器、引用和指针在`swap`操作之后都不会失效。
+
+对一个`string`调用`swap`会导致迭代器、引用和指针失效。
+
+`swap`两个`array`会真正交换它们的元素。因此，交换两个`array`所需的时间与`array`中元素的数目成正比。
+
+因此，对于`array`，在`swap`操作之后，指针、引用和迭代器所绑定的元素保持不变，但元素已经与另一个`array`中对应元素的值进行了交换。
 
 ### 9.2.6 容器大小操作
 
+- 成员函数`size`返回容器中元素的数目；
+- `empty`当`size`为`0`时返回布尔值`true`，否则返回`false`；
+- `max_size`返回一个大于或等于该类型容器所能容纳的最大元素数的值。
+- `forward_list`支持`max_size`和`empty`，但不支持`size`。
+
 ### 9.2.7 关系运算符
+
+每个容器类型都支持相等运算符（`==`和`!=`）；
+除了无序关联容器外的所有容器都支持关系运算符（`>`、`>=`、`<`、`<=`）。
+
+#### 容器的关系运算符使用元素的关系运算符完成比较
+
+Note: 只有当其元素类型也定义了相应的比较运算符时，我们才可以使用关系运算符来比较两个容器。
+
+如果元素类型不支持所需运算符，那么保存这种元素的容器就不能使用相应的关系运算。
+例如，我们在第7章中定义的`Sales_data`类型并未定义`==`和`<`运算。因此，就不能比较两个保存`Sales_data`元素的容器：
+
+```cpp
+vector<Sales_data> storeA, storeB;
+if (storeA < storeB)    // 错误：Sales_data 没有 < 运算符
+```
+
+**练习9.17：假定`c1`和`c2`是两个容器，下面的比较操作有何限制（如果有的话）？**
+`if (c1 < c2)`
+
+【解答】
+首先，容器类型必须相同，元素类型也必须相同。
+其次，元素类型必须支持 `<` 运算符。
+
+**练习9.16：重写上一题的程序，比较一个 `list<int>` 中的元素和一个`vector<int>`中的元素。**
+
+```cpp
+/* 练习9.16：重写上一题的程序，比较一个 list<int> 中的元素和一个 vector<int> 中的元素。*/
+
+/* 练习9.15：编写程序，判定两个 vector<int> 是否相等。
+
+【解答】标准库容器支持关系运算符，比较两个 vector 是否相等使用 == 运算符即可。
+当两个vector包含相同个数的元素，且对位元素都相等时，判定两个 vector 相等，否则不等。
+两个 vector 的 capacity 不会影响相等性判定，因此，当下面程序中 ivec1 在添加、删除元素导致扩容后，仍然与 ivec 相等。*/
+
+#include <iostream>
+#include <vector>
+#include <list>
+
+using namespace std;
+
+bool l_v_equal(vector<int> &ivec, list<int> &ilist) {
+    // 比较 list 和 vector 元素个数
+    if (ilist.size() != ivec.size())
+        return false;
+
+    auto lb = ilist.cbegin();       // list 首元素
+    auto le = ilist.cend();         // list 尾后位置
+    auto vb = ivec.cbegin();        // vector 首元素
+    for ( ; lb != le; lb++, vb++)
+        if (*lb != *vb)             // 元素不等，容器不等
+            return false;
+    return true;                    // 容器相等
+}
+
+int main()
+{
+    vector<int> ivec = {1, 2, 3, 4, 5, 6, 7};
+    list<int> ilist = {1, 2, 3, 4, 5, 6, 7};
+    list<int> ilist1 = {1, 2, 3, 4, 5};
+    list<int> ilist2 = {1, 2, 3, 4, 5, 6, 8};
+    list<int> ilist3 = {1, 2, 3, 4, 5, 7, 6};
+
+    cout << l_v_equal(ivec, ilist) << endl;
+    cout << l_v_equal(ivec, ilist1) << endl;
+    cout << l_v_equal(ivec, ilist2) << endl;
+    cout << l_v_equal(ivec, ilist3) << endl;
+
+    return 0;
+}
+```
 
 ## 9.3 顺序容器操作
 
 ### 9.3.1 向顺序容器添加元素
+
+| 表9.5：                                        | 向顺序容器添加元素的操作                                     |
+| ---------------------------------------------- | ------------------------------------------------------------ |
+|                                                | 这些操作会改变容器的大小；`array`不支持这些操作。            |
+|                                                | `forward_list`有自己专有版本的`insert`和`emplace`；          |
+|                                                | `forward_list`不支持`push_back`和`emplace_back`。            |
+|                                                | `vector`和`string`不支持`push_front`和`emplace_front`。      |
+| `c.push_back(t)`<br />`c.emplace_back(args)`   | 在`c`的尾部创建一个值为`t`或由`args`创建的元素，返回`void`   |
+| `c.push_front(t)`<br />`c.emplace_front(args)` | 在`c`的头部创建一个值为`t`或由`args`创建的元素，返回`void`   |
+| `c.insert(p, t)`<br />`c.emplace(p, args)`     | 在迭代器`p`指向的元素之前创建一个值为`t`或由`args`创建的元素。返回指向新添加的元素的迭代器 |
+| `c.insert(p, n, t)`                            | 在迭代器`p`指向的元素之前插入`n`个值为`t`的元素。返回指向新添加的第一个元素的迭代器；若`n`为`0`，则返回`p` |
+| `c.insert(p, b, e)`                            | 将迭代器`b`和`e`指定的范围内的元素插入到迭代器`p`指向的元素之前。`b`和`e`不能指向`c`中的元素。返回指向新添加的第一个元素的迭代器；若范围为空，则返回`p` |
+| `c.insert(p, il)`                              | `il`是一个花括号包围的元素值列表。将这些给定值插入到迭代器`p`指向的元素之前。返回指向新添加的第一个元素的迭代器；若列表为空，则返回`p` |
+
+WARNING: 向一个`vector`、`string`或`deque`插入元素会使所有指向容器的迭代器、引用和指针失效。
+
+在一个`vector`或`string`的尾部之外的任何位置，或是一个`deque`的首尾之外的任何位置添加元素，都需要移动元素。
+而且，向一个`vector`或`string`添加元素可能引起整个对象存储空间的重新分配。
+重新分配一个对象的存储空间需要分配新的内存，并将元素从旧的空间移动到新的空间中。
+
+#### 使用`push_back`
+
+除`array`和`forward_list`之外，每个顺序容器（包括`string`类型）都支持`push_back`。
+
+```cpp
+// 从标准输入读取数据，将每个单词放到容器末尾
+string word;
+while (cin >> word)
+    container.push_back(word);
+```
+
+`container`的类型可以是`list`、`vector`或`deque`。
+
+由于`string`是一个字符容器，我们也可以用`push_back`在`string`末尾添加字符：
+
+```cpp
+void pluralize (size_t cnt, string &word)
+{
+    if (cnt > 1)
+        word.push_back('s');    // 等价于 word += 's'
+}
+```
+
+**练习9.20：编写程序，从一个 `list<int>` 拷贝元素到两个 `deque` 中。值为偶数的所有元素都拷贝到一个 `deque` 中，而奇数值元素都拷贝到另一个 `deque` 中。**
+
+```cpp
+/* 练习9.20：编写程序，从一个 `list<int>` 拷贝元素到两个 `deque` 中。
+值为偶数的所有元素都拷贝到一个 `deque` 中，而奇数值元素都拷贝到另一个 `deque` 中。
+
+【出题思路】练习多个容器间数据的处理、拷贝。*/
+
+#include <iostream>
+#include <list>
+#include <deque>
+
+using namespace std;
+
+int main()
+{
+    list<int> ilist = {1, 2, 3, 4, 5, 6, 7, 8}; // 初始化整数 list
+    deque<int> odd_d, even_d;
+
+    // 遍历整数 list
+    for (auto iter = ilist.cbegin(); iter != ilist.cend(); iter++)
+        if (*iter & 1)      // 查看最低位，1：奇数， 0：偶数
+            odd_d.push_back(*iter);
+        else even_d.push_back(*iter);
+
+    cout << "The odd numbers are: ";
+    for (auto iter = odd_d.cbegin(); iter != odd_d.cend(); iter++)
+        cout << *iter << " ";
+    cout << endl;
+
+    cout << "The even numbers are: ";
+    for (auto iter = even_d.cbegin(); iter != even_d.cend(); iter++)
+        cout << *iter << " ";
+    cout << endl;
+
+    return 0;
+}
+
+/*Output:
+The odd numbers are: 1 3 5 7
+The even numbers are: 2 4 6 8
+
+【其他解题思路】对于奇偶性判定，可用模2运算“%2”代替位与运算，两者是等价的。*/
+```
+
+**关键概念：容器元素是拷贝：**
+
+当我们用一个对象来初始化容器时，或将一个对象插入到容器中时，实际上放入到容器中的是对象值的一个拷贝，而不是对象本身。
+就像我们将一个对象传递给非引用参数一样，容器中的元素与提供值的对象之间没有任何关联。
+随后对容器中元素的任何改变都不会影响到原始对象，反之亦然。
+
+#### 使用`push_front`
+
+`list`、`forward_list`和`deque`还支持`push_front`的类似操作，将元素插入到容器头部：
+
+```cpp
+list<int> ilist;
+// 将元素添加到 ilist 开头
+for (size_t ix = 0; ix != 4; ++ix)
+    ilist.push_front(ix);
+```
+
+此循环将元素0、1、2、3添加到`ilist`头部。在循环执行完毕后，`ilist`保存序列3、2、1、0。
+
+**练习9.18：编写程序，从标准输入读取 `string` 序列，存入一个 `deque` 中。编写一个循环，用迭代器打印 `deque` 中的元素。**
+
+```cpp
+/* 练习9.18：编写程序，从标准输入读取 `string` 序列，存入一个 `deque` 中。编写一个循环，用迭代器打印 `deque` 中的元素。
+
+【解答】对 `deque` 来说，在首尾位置添加新元素性能最佳，在中间位置插入新元素性能会很差。对遍历操作，可高效完成。*/
+
+#include <iostream>
+#include <deque>
+
+using namespace std;
+
+int main()
+{
+    deque<string> sd;   // string 的 deque
+
+    string word;
+    while (cin >> word) // 读取字符串，直至遇到文件结束符
+        sd.push_back(word);
+
+    // 用 cbegin() 获取 deque 首元素迭代器，遍历 deque 中所有元素
+    for (auto si = sd.cbegin(); si != sd.cend(); si++)
+        cout << *si << endl;
+
+    return 0;
+}
+
+/*【其他解题思路】
+由于在 `deque` 的首尾位置添加新元素性能很好，因此可以用 `push_front` 替换 `push_back`，性能不变，但元素在 `deque` 中的顺序将与输入顺序相反。
+若需保持相同顺序，应使用 `push_back`。*/
+```
+
+#### 在容器中的特定位置添加元素
+
+`vector`、`deque`、`list`和`string`都支持`insert`成员。
+
+`insert`函数将元素插入到迭代器所指定的位置之前：
+
+```cpp
+slist.insert(iter, "Hello!");   // 将 "Hello!" 添加到 iter 之前的位置
+// 将一个值为"Hello"的string插入到iter指向的元素之前的位置
+```
+
+虽然某些容器不支持`push_front`，但它们对于`insert`操作并无类似的限制（插入开始位置）。因此，我们可以将元素插入到容器的开始位置，而不必担心容器是否支持`push_front`：
+
+```cpp
+vector<string> svec;
+list<string> slist;
+
+// 等价于调用 slist.push_front("Hello!");
+slist.insert(slist.begin(), "Hello!");
+
+// vector 不支持 push_front，但我们可以插入到 begin() 之前
+// 警告：插入到 vector 末尾之外的任何位置都可能很慢
+svec.insert(svec.begin(), "Hello!");
+```
+
+WARNING: 将元素插入到`vector`、`deque`和`string`中的任何位置都是合法的。然而，这样做可能很耗时。
+
+#### 插入范围内元素
+
+接受一对迭代器或一个初始化列表的 insert 版本将给定范围中的元素插入到指定位置之前：
+
+```cpp
+// 接受一对迭代器或一个初始化列表的 insert 版本将给定范围中的元素插入到指定位置之前：
+vector<string> v = {"quasi", "simba", "frollo", "scar"};
+// 将 v 的最后两个元素添加到 slist 的开始位置
+slist.insert(slist.begin(), v.end() - 2, v.end());
+slist.insert(slist.end(), {"these", "words", "will", "go", "at", "the", "end"});
+```
+
+如果我们传递给`insert`一对迭代器，它们不能指向添加元素的目标容器：
+
+```cpp
+// 运行时错误：迭代器表示要拷贝的范围，不能指向与目的位置相同的容器
+slist.insert(slist.begin(), slist.begin(), slist.end());
+```
+
+#### 使用`insert`的返回值
+
+通过使用`insert`的返回值，可以再容器中一个特定位置反复插入元素：
+
+```cpp
+list<string> lst;
+auto iter = lst.begin();
+while (cin >> word)
+    iter = lst.insert(iter, word);  // 等价于调用 push_front
+```
+
+**练习：假定`iv`是一个`int`的`vector`，下面的程序存在什么错误？你将如何修改？**
+
+```cpp
+vector<int>::iterator iter = iv.begin(),
+                       mid = iv.begin() + iv.size()/2;
+while (iter != mid)
+    if (*iter == some_val)
+        iv.insert(iter, 2 * some_val);
+```
+
+【出题思路】
+首先，理解容器插入操作的副作用 —— 向一个`vector`、 `string`或`deque`插入元素会使现有指向容器的迭代器、引用和指针失效。
+其次，练习如何利用`insert`返回的迭代器，使得在向容器插入元素后，仍能正确在容器中进行遍历。
+
+【解答】
+循环中未对`iter`进行递增操作，`iter`无法向中点推进。其次，即使加入了`iter++`语句，由于向`iv`插入元素后，`iter`己经失效，`iter++`也不能起到将迭代器向前推进一个元素的作用。修改方法如下：
+
+首先，将`insert`返回的迭代器赋予`iter`，这样，`iter`将指向新插入的元素`y`。我们知道，`insert`将`y`插入到`iter`原来指向的元素`x`之前的位置，因此，接下来我们需要进行两次`iter++`才能将`iter`推进到`x`之后的位置。
+
+其次，`insert()`也会使`mid`失效，因此，只正确设置`iter`仍不能令循环在正确的时候结束，我们还需设置`mid`使之指向`iv`原来的中央元素。在未插入任何新元素之前，此位置是`iv.begin() + iv.size()/2`，我们将此时的`iv.size()`的值记录在变量`org_size`中。然后在循环过程中统计新插入的元素的个数`new_ele`，则在任何时候，`iv.begin() + org_size/2 + new_ele` 都能正确指向 `iv` 原来的中央元素。
+
+```cpp
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<int> iv = {1, 1, 2, 1};  // int 的 vector
+    int some_val = 1;
+
+    vector<int>::iterator iter = iv.begin();
+    int org_size = iv.size(), new_ele = 0;  // 原大小和新元素个数
+
+    // 每个循环步都重新计算 "mid"，保证正确指向 iv 原中央元素
+    while (iter != (iv.begin() + org_size / 2 + new_ele))
+        if (*iter == some_val) {
+            iter = iv.insert(iter, 2 * some_val);
+            new_ele++;
+            iter++; iter++; // 将 iter 推进到旧元素的下一个位置
+        } else iter++;      // 简单推进 iter
+
+    // 用 begin() 获取 vector 首元素迭代器，遍历 vector 中的所有元素
+    for (iter iv.begin(); iter != iv.end(); iter++)
+        cout << *iter << endl;
+
+    return 0;
+}
+```
+
+#### 使用`emplace`操作
+
+当我们调用`emplace`成员函数时，是将参数传递给元素类型的构造函数。
+`emplace`成员使用这些参数在容器管理的内存空间中直接构造元素。
+
+例如：假定`c`保存`Sales_data`元素：
+
+```cpp
+// 在 c 的末尾构造一个 Sales_data 对象
+// 使用三个参数的 Sales_data 构造函数
+c.emplace_back("978-0590353403", 25, 15.99);
+// 错误：没有接受三个参数的 push_back 版本
+c.push_back("978-0590353403", 25, 15.99);
+// 正确：创建一个临时的 Sales_data 对象传递给 push_back
+c.push_back(Sales_data("978-0590353403", 25, 15.99));
+```
+
+在调用`emplace_back`时，会在容器管理的内存空间中直接创建对象。而调用`push_back`则会创建一个局部临时对象，并将其压入容器中。
+
+`emplace`函数的参数根据元素类型而变化，参数必须与元素类型的构造函数相匹配：
+
+```cpp
+// iter 指向 c 中一个元素，其中保存了 Sales_data 元素
+c.emplace_back();   // 使用 Sales_data 的默认构造函数
+c.emplace(iter, "999-999999999");   // 使用 Sales_data(string)
+// 使用 Sales_data 的接受一个 ISBN、一个 count 和一个 price 的构造函数
+c.emplace_front("978-0590353403", 25, 15.99");
+```
+
+Note: `emplace`函数在容器中直接构造元素。传递给`emplace`函数的参数必须与元素类型的构造函数相匹配。
 
 ### 9.3.2 访问元素
 
