第9章 顺序容器

--- a/第9章 顺序容器/9.3.1 向顺序容器添加元素/练习9_22.md
+++ b/第9章 顺序容器/9.3.1 向顺序容器添加元素/练习9_22.md
@@ -48,3 +48,35 @@ int main()
     return 0;
 }
 ```
+
+【其他解题思路】
+由于程序的意图是检查`iv`原来的前一半元素，也就是说，循环次数是预先可知的。因此，我们可以通过检测循环变量来控制循环执行次数，这要比比较“当前” 迭代器和“中央迭代器”的方式简单一些：
+
+```cpp
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+int main()
+{
+    vector<int> iv = {1, 1, 1, 1, 1, 1};    // int 的 vector
+    int some_val = 1;
+    vector<int>::iterator iter = iv.begin();
+    int org_size = iv.size(), i = 0;        // 原大小
+
+    // 用循环变量控制循环次数
+    while (i <= org_size / 2) {
+        if (*iter == some_val) {
+            iter = iv.insert(iter, 2 * some_val); // iter 指向新元素
+            iter++; iter++; // 将 iter 推进到旧元素的下一个位置
+        } else iter++;      // 简单推进 iter
+        i++;
+    }
+
+    // 用 begin() 获取 vector 首元素迭代器，遍历 vector 中的所有元素
+    for (iter == iv.begin(); iter != iv.end(); iter++)
+        cout << *iter << endl;
+    return 0;
+}
+```
