--- a/第9章 顺序容器.md
+++ b/第9章 顺序容器.md
@@ -40,6 +40,8 @@
     - [9.3.4 特殊的`forward_list`操作](#934-特殊的forward_list操作)
     - [9.3.5 改变容器大小](#935-改变容器大小)
     - [9.3.6 容器操作可能使迭代器失效](#936-容器操作可能使迭代器失效)
+      - [编写改变容器的循环程序](#编写改变容器的循环程序)
+      - [不要保存`end`返回的迭代器](#不要保存end返回的迭代器)
   - [9.4 vector对象是如何增长的](#94-vector对象是如何增长的)
   - [9.5 额外的string操作](#95-额外的string操作)
     - [9.5.1 构造string的其他方法](#951-构造string的其他方法)
@@ -1302,9 +1304,209 @@ int main()
 // Output: 2 4 6 8
 ```
 
+**练习9.28：编写函数，接受一个 `forward list<string>` 和两个 `string` 共三个参数。函数应在链表中查找第一个 `string`，并将第二个`string` 插入到紧接着第一个 `string` 之后的位置。若第一个 `string` 未在链表中，则将第二个 `string` 插入到链表末尾。**
+
+```cpp
+/* 练习9.28：编写函数，接受一个 `forward list<string>` 和两个 `string` 共三个参数。
+函数应在链表中查找第一个 `string`，并将第二个`string` 插入到紧接着第一个 `string` 之后的位置。
+若第一个 `string` 未在链表中，则将第二个 `string` 插入到链表末尾。 */
+
+#include <iostream>
+#include <forward_list>
+
+using namespace std;
+
+void test_and_insert(forward_list<string> &sflst, const string &s1, const string &s2)
+{
+    auto prev = sflst.before_begin();               // 前驱元素
+    auto curr = sflst.begin();                      // 当前元素
+    bool inserted = false;
+
+    while (curr != sflst.end()) {
+        if (*curr == s1) {                          // 找到给定字符串
+            curr = sflst.insert_after(curr, s2);    // 插入新字符串，curr 指向它
+            inserted = true;
+        }
+        prev = curr;                                // 前驱迭代器向前推进
+        curr++;                                     // 当前迭代器向前推进
+    }
+
+    if (!inserted)
+        sflst.insert_after(prev, s2);               // 未找到给定字符串，插入尾后
+}
+
+int main()
+{
+    forward_list<string> sflst = {"Hello", "!", "world", "!"};
+
+    test_and_insert(sflst, "Hello", "nihao");
+    for (auto curr = sflst.cbegin(); curr != sflst.cend(); curr++)
+        cout << *curr << " ";
+    cout << endl;   // Hello nihao ! world !
+
+    test_and_insert(sflst, "!", "?");
+    for (auto curr = sflst.cbegin(); curr != sflst.cend(); curr++)
+        cout << *curr << " ";
+    cout << endl;   // Hello ! ? world ! ?
+
+    test_and_insert(sflst, "Bye", "Zaijian");
+    for (auto curr = sflst.cbegin(); curr != sflst.cend(); curr++)
+        cout << *curr << " ";
+    cout << endl;   // Hello ! world ! Zaijian
+
+    return 0;
+}
+```
+
 ### 9.3.5 改变容器大小
 
+用`resize`来增大或缩小容器
+
+```cpp
+list<int> ilist(10, 42);    // 10 个 int：每个的值都是42
+ilist.resize(15);           // 将 5 个值为 0 的元素添加到 ilist 的末尾
+ilist.resize(25, -1);       // 将 10个 值为 -1 的元素添加列 ilist 的末尾
+ilist.resize(5);            // 从 ilist 末尾删除 20 个元素
+```
+
+| 表9.9：                 | 顺序容器大小操作                                             |
+| ----------------------- | ------------------------------------------------------------ |
+| `resize`不适用于`array` |                                                              |
+| `c.resize(n)`           | 调整`c`的大小为`n`个元素。若 `n<c.size()` 则多出的元素被丢弃。若必须添加新元素，对新元素进行值初始化 |
+| `c.resize(n,t)`         | 调整`c`的大小为`n`个元素。任何新添加的元素都初始化为值`t`    |
+
+WARNNG: 如果`resize`缩小容器，则指向被删除元素的迭代器、引用和指针都会失效：对`vector`、`string`或`deque`进行`resize`可能导致迭代器、指针 和引用失效。
+
+**练习9.30:接受单个参数的`resize`版本对元素类型有什么限制（如果有的话）？**
+
+ 【出题思路】 更深入理解改变容器大小的操作。
+ 【解答】对于元素是类类型，则单参数`resize`版本要求该类型必须提供一个**默认构造函数**。
+
 ### 9.3.6 容器操作可能使迭代器失效
+
+**在向容器添加元素后：**
+
+- 如果容器是`vector`或`string`，且存储空间被重新分配，则指向容器的迭代器、指针和引用都会失效。如果存储空间未重新分配，指向插入位置之前的元素的迭代器、指针和引用仍有效，但指向插入位置之后元素的迭代器、指针和引用将会失效。
+
+- 对于`deque`，插入到除首尾位置之外的任何位置都会导致迭代器、指针和引用失效。如果在首尾位置添加元素，迭代器会失效，但指向存在的元素的引用和指针不会失效。
+
+- 对于`list`和`forward_list`，指向容器的迭代器（包括尾后迭代器和首前迭代器）、指针和引用仍有效。
+
+**当我们删除一个元素后：**
+
+- 对于`list`和`forward_list`,指向容器其他位置的迭代器（包括尾后迭代器和首前迭代器）、引用和指针仍有效。
+
+- 对于`deque`，如果在首尾之外的任何位置删除元素，那么指向被删除元素外其他元素的迭代群、引用或指针也会失效。如果是删除`deque`的尾元素，则尾后迭代器也会失效，但其他迭代器、引用和指针不受影响；如果是删除首元素，这些也不会受影响。
+
+- 对于`vector`和`string`，指向被删元素之前元素的迭代器、引用和指针仍有效。 注意：当我们删除元素时，尾后迭代器总是会失效。
+
+**建议：管理迭代器：**
+
+必须保证每次改变容器的操作之后都正确地重新定位迭代器。这个建议对`vector`、`string`和`deque`尤为重要。
+
+#### 编写改变容器的循环程序
+
+程序比须保证每个循环步中都更新迭代器、引用和指针。如果循环中调用的是`insert`或`erase`，那么更新迭代器很容易。这些操作都返回迭代器，我们可以用来更新：
+
+```cpp
+// 此程序删除 vector 中的偶数值元素，并复制每个奇数值元素
+// 我们在调用 insert 和 erase 后都更新迭代器，因为两者都会使迭代器失效
+vector<int> vi = {0,1,2,3,4,5,6,7,8,9};
+auto iter = vi.begin();
+while (iter != vi.end()) {
+    if (*iter % 2) {
+        iter = vi.insert(iter, *iter);  // 复制当前元素
+        iter += 2;  // 当前移动迭代器，跳过当前元素以及插入到它之前的元素
+    } else
+        iter = vi.erase(iter);          // 删除偶数元素
+        // 不应向前移动迭代器，iter 指向我们删除的元素之后的元素
+}
+```
+
+在调用`erase`后，不必递增迭代器，因为`erase`返回的迭代器已经指向序列中下一个元素。
+调用`insert`后，需要递增迭代器两次。记住，`insert`在给定位置之前插入新元素，然后返回指向新插入元素的迭代器。因此，在调用`insert`后，`iter`指向新插入元素，位于我们正在处理的元素之前。我们将迭代器递增两次，恰好越过了新添加的元素和正在处理的元素，指向下一个未处理的元素。
+
+**练习9.31：第316页中删除偶数值元素并复制奇数值元素的程序不能用于`list` 或`forward_list`。为什么，修改程序，使之也能用于这些类型。**
+
+【出题思路】
+本题继续练习`list`和`forward_list`的插入、删除操作，理解与其他容器的 不同，理解对迭代器的影响。
+
+【解答】`list`和`forward_list`与其他容器的一个不同是，迭代器不支持加减运算，究其原因，**链表中元素并非在内存中连续存储**，因此无法通过地址的加减在元素间远距离移动。因此，应多次调用`++`来实现与迭代器加法相同的效果。
+
+```cpp
+#include <iostream>
+#include <list>
+
+using namespace std;
+
+int main()
+{
+    // 删除偶数元素，复制每个奇数元素
+    list<int> ilst = {0,1,2,3,4,5,6,7,8,9};
+    auto curr = ilst.begin();                   // 首节点
+
+    while (curr != ilst.end()) {
+        if (*curr & 1) {                        // 奇数
+            curr = ilst.insert(curr, *curr);    // 插入到当前元素之前
+            curr++; curr++;                     // 移动到下一元素
+        } else                                  // 偶数
+            curr = ilst.erase(curr);            // 删除，指向下一元素
+    }
+
+    for (curr = ilst.begin(); curr != ilst.end(); curr++)
+        cout << *curr << " ";
+    cout << endl;
+
+    return 0;
+}
+```
+
+对于 `forward_list`，由于是单项链表结构，删除元素时，需将前驱指针调整为指向下一个节点，因此需维护“前驱”、“后继”两个迭代器。
+
+```cpp
+#include <iostream>
+#include <forward_list>
+
+using namespace std;
+
+int main()
+{
+    forward_list<int> iflst = {0,1,2,3,4,5,6,7,8,9};
+    auto prev = iflst.before_begin();               // 前驱节点
+    auto curr = iflst.begin();                      // 首节点
+
+    while (curr != iflst.end()) {
+        if (*curr & 1) {                            // 奇数
+            curr = iflst.insert_after(curr, *curr); // 插入到当前元素之后
+            prev = curr;                            // prev 移动到新插入元素
+            curr++;                                 // curr 移动到下一元素
+        } else                                      // 偶数
+            curr = iflst.erase_after(prev);         // 删除，curr 指向下一元素
+    }
+
+    for (curr = iflst.begin(); curr != iflst.end(); curr++)
+        cout << *curr << " ";
+    cout << endl;
+
+    return 0;
+}
+```
+
+#### 不要保存`end`返回的迭代器
+
+保存尾迭代器的值是一个坏主意，不能在循环之前保存`end`返回的迭代器一直当做容器末尾使用。
+
+Tip: 如果在一个循环体中插入/删除 `deque`、`string` 或 `vector` 中的元素，不要缓存 `end` 返回的迭代器。
+
+```cpp
+// 更安全的方法：在每个循环步添加/删除元素后都重新计算 end
+while (begin != v.end()) {
+    // 做一些处理
+    ++begin;    // 向前移动 begin，因为我们想在此元素之后插入元素
+    begin = v.insert(begin, 42);    // 插入新值
+    ++begin;    // 向前移动 begin，跳过我们刚刚加入的元素
+}
+```
 
 ## 9.4 vector对象是如何增长的
 
