--- a/第4章 表达式.md
+++ b/第4章 表达式.md
@@ -423,7 +423,7 @@ while (pbeg != v.end() && *beg >= 0)
     cout << *pbeg++ << endl;    // 输出当前值并将 pbeg 向前移动一个元素
 ```
 
-分析：后置递增运算福的优先级高于解引用运算符，因此`*pbeg++`等价于`*(pbeg++)`。`pbeg++`把`pbeg`的值加`1`，然后返回`pbeg`的初始值的副本作为其求值结果，此时解引用运算符的运算对象是`pbeg`为增加之前的值。最终这条语句输出`pbeg`开始时指向的那个元素，并将之真向前移动一个位置。
+分析：后置递增运算符的优先级高于解引用运算符，因此`*pbeg++`等价于`*(pbeg++)`。`pbeg++`把`pbeg`的值加`1`，然后返回`pbeg`的初始值的副本作为其求值结果，此时解引用运算符的运算对象是`pbeg`为增加之前的值。最终这条语句输出`pbeg`开始时指向的那个元素，并将之真向前移动一个位置。
 
 这种用法完全是基于一个事实，即后置递增运算符返回初始的未加`1`的值。如果返回的是加`1`之后的值，解引用该值将产生错误的结果。不但无法输出第一个元素，而且更糟糕的是如果序列选中没有负值，程序将可能试图解引用一个根本不存在的元素。
 
