第10章 泛型算法

--- a/第10 章 泛型算法.md
+++ b/第10 章 泛型算法.md
@@ -12,8 +12,13 @@
       - [拷贝算法](#拷贝算法)
     - [总结一下](#总结一下)
     - [10.2.3 重排容器元素的算法](#1023-重排容器元素的算法)
+      - [消除重复单词](#消除重复单词)
+      - [使用`unique`](#使用unique)
+      - [使用容器操作删除元素](#使用容器操作删除元素)
   - [10.3 定制操作](#103-定制操作)
     - [10.3.1 向算法传递函数](#1031-向算法传递函数)
+      - [谓词 (predicate)](#谓词-predicate)
+      - [排序算法](#排序算法)
     - [10.3.2 lambda表达式](#1032-lambda表达式)
     - [10.3.3 lambda捕获和返回](#1033-lambda捕获和返回)
     - [10.3.4 参数绑定](#1034-参数绑定)
@@ -552,15 +557,86 @@ copy(lst.begin(), lst.end(), back_inserter(vec));
 cout << equal(lst.begin(), lst.end(), vec.begin()) << endl;
 ```
 
+**练习10.10：你认为算法不改变容器大小的原因是什么？**
+
+泛型算法的一大优点是“泛型”，也就是一个算法可用于多种不同的数据类型，算法与所操作的数据结构分离。这对编程效率的提高是非常巨大的。
+
+要做到算法与数据结构分离，重要的技术手段就是使用迭代器作为两者的桥梁。算法从不操作具体的容器，从而也就不存在与特定容器绑定，不适用于其他容器的问题。算法只操作迭代器，由迭代器真正实现对容器的访问。不同容器实现自己特 定的迭代器（但不同迭代器是相容的），算法操作不同迭代器就实现了对不同容器的访问。
+
+因此，并不是算法应该改变或不该改变容器的问题。为了实现与数据结构的分离，为了实现通用性，**算法根本就不该知道容器的存在**。算法访问数据的唯一通道传来只是迭代器。是否改变容器大小，完全是迭代器的选择和责任。当我们向`fill_n`传递`back_inserter`时，虽然最终效果是向容器添加了新的元素，但对`fill_n`说，根本不知道这回事儿。它仍然像往常一样（通过迭代器）向元素赋予新值，不过这次是通过`back_inserter`来赋值，而`back_inserter`选择将新值添加到了容器而已。
+
 ### 10.2.3 重排容器元素的算法
 
+`sort` 会重排输入序列中的元素，使之有序，它是利用元素类型的`<`运算符来实现排序的。
+
+#### 消除重复单词
+
+为了消除重复单词，首先将`vector`排序，使得重复的单词都相邻出现。
+一旦`vector`排序完毕，我们就可以使用另一个称为`unique`的标准库算法来重排`vector`，使得不重复的元素出现在`vector`的开始部分。
+
+由于算法不能执行容器的操作，我们将使用`vector`的`erase`成员来完成真正的删除操作：
+
 ```cpp
-// 
+void elimDups(vector<string> &words)
+{
+    // 按字典序排序 words，以便查找重复单词
+    sort(words.begin(), words.end());
+    // unique 重排输入范围，使得每个单词只出现一次
+    // 排列在范围的前部，返回指向不重复区域之后一个位置的迭代器
+    auto end_unique = unique(words.begin(), words.end());
+    // 使用向量操作 erase 删除重复单词
+    words.erase(end_unique, words.end());
+}
 ```
+
+#### 使用`unique`
+
+P343 有图, `end_unique`是最后一个不重复元素之后的位置
+
+`words`的大小并未改变，它仍有`10`个元素。但这些元素的顺序被改变了——相邻的重复元索被“删除”了．我们将删除打引号是因为`unique`并不真的删除任何元素，它只是覆盖相邻的重复元素，使得不重复元素出现在序列开始部分。`unique`返回的迭代器指向最后一个不重复元素之后的位置。此位置之后的元素仍然存在，但我们不知道它们的值是什么。
+
+`unique`的实现方式并不是删除重复值，而是将它们交换到了容器的末尾。
+
+#### 使用容器操作删除元素
+
+为了真正地删除无用元素，使用`erase`删除从`end_unique`开始直至`words`末尾的范围内的所有元素。
+
+值得注意的是，即使`words`中没有重复单词，这样调用`erase`也是安全的．在此情况下，`unique`会返回`words.end()`。因此，传递给`erase`的两个参数具有相同的值`words.end()`。
+
+迭代器相等意味着传递给`erase`的元素范围为空。删除一个空范围没有什么不良后果，因此程序即使在输入中无重复元素的情况下也是正确的。
 
 ## 10.3 定制操作
 
 ### 10.3.1 向算法传递函数
+
+#### 谓词 (predicate)
+
+标准库算法所使用的谓词分为两类：**一元谓词**(unary predicate)，意味着它们只接受单一参数和**二元谓词**(binary predicate)，意味着它们有两个参数。
+
+```cpp
+// 比较函数，用来按长度排序单词
+bool isShorter(const string &s1, const string &s2)
+{
+    return s1.size() < s2.size();
+}
+// 按长度由短至长排序 words
+sort(words.begin(), words.end(), isShorter);
+```
+
+#### 排序算法
+
+通过调用`stable_sort`，可以保持等长元素间的字典序：
+
+```cpp
+elimDups(words);    // 将 words 按字典序重排，并消除重复单词
+// 按长度重新排序，长度相同的单词维持字典序
+stable_sort(words.begin(), words.end(), isShorter);
+for (const auto &s : words) // 无须拷贝字符串
+    cout << s << " ";   // 打印每个元素，以空格分隔
+cout << endl;
+```
+
+调用前`words`是按字典序排列的，调用之后，`words`会按元素大小排序....
 
 ### 10.3.2 lambda表达式
 
