第17章 标准库特殊设施

--- a/第11章 关联容器.md
+++ b/第11章 关联容器.md
@@ -55,7 +55,27 @@ for (const auto &w : word_count)
 在此程序中，`map`保存的每个元素中，关键字是`string`类型，值是`size_t`类型。
 当对`word_count`进行下标操作时，我们使用一个`string`作为下标，获得与此`string`相关联的`size_t`类型的计数器。
 
+当从 `map` 中提取一个元素时，会得到一个 `pair` 类型的对象。`pair` 是一个模板类型，保存两个名为 `first` 和 `second` 的（公有）数据成员。`map` 所使用的 `pair` 用 `first` 成员保存关键字，用 `second` 成员保存对应的值。
+
 ### 使用`set`
+
+用 `set` 保存想忽略的单词，只对不存在集合中的单词统计出现次数：
+
+```cpp
+// 统计输入中每个单词出现的次数
+map<string, size_t> word_count; // string 到 size_t 的空 map
+set<string> exclude = {"The", "But", "And", "Or", "An", "A",
+                       "the", "but", "and", "or", "an", "a"};
+string word;
+while (cin >> word)
+    // 只统计不在 exclude 中的单词
+    if (exclude.find(word) == exclude.end())
+        ++word_count[word]; // 获取并递增 word 的计数器
+```
+
+`find` 的使用：`find` 调用返回一个迭代器。如果给定关键字在 `set` 中，迭代器指向该关键字。否则，`find` 返回尾后迭代器。
+
+
 
 ## 11.2 关联容器概述
 
