C_第15章 位操作

--- a/C_第15章 位操作.md
+++ b/C_第15章 位操作.md
@@ -17,5 +17,192 @@ eg: 二进制数 `1101` 可表示为：
 
 1 字节(byte) 包含 8 位。
 
-![15_1_位编号和位值]()
+![15_1_位编号和位值](https://raw.githubusercontent.com/KimmiGYH/CPP_Primer_Notes_Public/master/C_%E7%AC%AC15%E7%AB%A0%20%E4%BD%8D%E6%93%8D%E4%BD%9C/15_1_%E4%BD%8D%E7%BC%96%E5%8F%B7%E5%92%8C%E4%BD%8D%E5%80%BC.png)
 
+这里，`128` 是 `2` 的 `7` 次幂，以此类推。该字节能表示的最大数字是把所有位都设置为 `1`：`11111111`。这个二进制数的值是：
+
+`128 + 64 + 32 + 16 + 8 + 4+ 2 + 1 = 255`
+
+而该字节最小的二进制数是 `00000000`，其值为 `0`。
+
+因此，`1` 字节可储存 `0 ~ 255` 范围内的数字，总共 `256` 个值。
+
+或者，通过不同的方式解释 **位组合(bit pattern)**，程序可以用 `1` 字节储存 `-128 ~ +127` 范围内的整数，总共还是 `256` 个值。
+
+例如，通常 `unsigned char` 用 `1` 字节表示的范围是 `0 ~ 255`，而 `signed char` 用 `1` 字节表示的范围是 `-128 ~ +127`。
+
+### 15.1.2 有符号整数
+
+**原码、补码、反码：**
+
+#### 原码
+
+如何表示有符号整数取决于硬件，而不是C语言。
+也许表示有符号数最简单的方式是用 `1` 位（如，高阶位）储存符号，只剩下 `7` 位表示数字本身（假设存储在 `1` 字节中）。
+
+用这种**符号量(sign-magnitude)**表示法，
+`10000001` 表示 `-1`，
+`00000001` 表示 `1`。
+因此，其表示范围是 `-127 ~ +127`。
+
+缺点：这种方法的缺点是有两个 `0`：`+0` 和 `-0`。这很容易混淆，而且用两个位组合来表示一个值也有些浪费。
+
+#### 补码
+
+**二进制补码(two's-complement)**方法避免了这个问题，是当今最常用的系统。
+
+我们将以 `1` 字节为例，讨论这种方法。
+
+- 方法一：二进制补码用 `1` 字节中的后 `7` 位表示 `0 ~ 127`，高阶位设置为 `0`。目前，这种方法和符号量的方法相同。
+- 方法二：另外，如果高阶位是 `1`，表示的值为负。
+- 上述这两种方法的区别在于如何确定负值。
+
+**如何确定负值**：从一个 `9` 位组合 `100000000` (`256` (2^8) 的二进制形式) 减去一个负数的位组合，结果是该负值的量。
+
+举例：假设一个负值的位组合是 `10000000`，
+作为一个无符号字节，该组合为表示 `128` (2^7)；
+作为一个有符号值，该组合表示负值（编码是`7`的位为`1`），而且值为 `100000000 - 10000000`，即`10000000`，值为 `2^8 - 2^7 = 128`。
+
+类似的，
+`10000001`(129) 是 `-127` (即 -(256 - 129) = -127)，
+`11111111`(255) 是 `-1`，(即 -(256 - 255) = -1)。
+
+**【总结】如何求补码？**
+
+第一步：先求该二进制数作为无符号字节时，该组合表示的值 `x`；
+
+第二步：用 `- (2^8 - x)` 即可求出当该二进制数作为有符号值时的负值。
+
+#### 反码
+
+**二进制反码(one's-complement)**方法通过反转位组合中的每一位形成一个附属。
+
+例如：`00000001` 是 `1`，那么 `11111110` 是 `-1`。
+
+缺点：这种方法也有一个 `-0`。该方法能表示 `-127 ~ +127` 之间的数。
+
+### 15.1.3 二进制浮点数
+
+十进制小数中，使用 10 的幂作为分母：
+
+eg: `0.527` 表示为：
+
+`5/10 + 2/100 + 7/1000`
+
+二进制小数中，使用 2 的幂作为分母：
+
+eg: `.101` 表示为：
+
+`1/2 + 0/4 + 1/8`，即 `0.625`
+
+实际上，二进制表示法只能精确地表示多个 `1/2` 的幂的和。
+因此，3/4 和 7/8 可以精确地表示为二进制小数，但是 1/3 和 2/5 却不能。
+
+## 15.2 其他进制数
+
+### 15.2.1 八进制
+
+**八进制(octal)**是指八进制记数系统。基于 `8` 的幂，用 `0~7`表示数字。
+例如：八进制数 `451`（在C中写作 `0451`）表示为：
+
+`4 * 8^2 + 5 * 8^1 + 1 * 8^0 = 297（十进制）`
+
+了解八进制的简单方法是，每个八进制位对应 `3` 个二进制位。
+这种关系使得八进制与二进制之间的转换很容易。
+
+例如：八进制数 `0377` 的二进制形式是 `11111111`。
+
+用 `111` 代替 `0377` 中的最后一个 `7`，再用 `111` 代替倒数第 `2` 个 `7`，最后用 `011` 代替 `3`，并社区第1位的 `0`。
+
+这表明比 `0377` 大的八进制要用多个字节表示。
+
+这是八进制唯一不方便的地方：
+一个 3 位的八进制数可能要用 `9` 位二进制数来表示。
+
+
+
+**表15.1 与八进制位等价的二进制位**
+
+| 八进制位 | 等价的二进制位 |
+| -------- | -------------- |
+| 0        | 000            |
+| 1        | 001            |
+| 2        | 010            |
+| 3        | 011            |
+| 4        | 100            |
+| 5        | 101            |
+| 6        | 110            |
+| 7        | 111            |
+
+### 15.2.2 十六进制
+
+**十六进制(hexadecimal 或 hex)**是指十六进制记数系统。基于 `16` 的幂，用 0 ~ 15表示，`0 ~ 9`表示数字，而 10 ~ 15 用字母 `A ~ F` 或者小写 `a ~ f` 来表示。
+
+例如：十六进制数 `A3F`（在C中写作 `OxA3F` 或者 `0xa3f`）表示为：
+
+`10 * 16^2 + 3 * 16^1 + 15 * 16^0 = 2623（十进制）`
+
+每个十六进制为都对应一个 `4` 位的二进制数（即 `4` 个二进制位），那么两个十六进制为恰好对应一个 `8` 位字节。第 1 个十六进制表示前 4 位，第 2 个十六进制位表示后 4 位。**因此，十六进制很适合表示字节值。**
+
+表 15.2 列出了各进制之间的对应关系。
+例如：十六进制值 `0xC2` 可转换为 `11000010`。
+相反，二进制值 `11010101` 可以看做是 `1101 0101`，课转换为 `0xD5`。
+
+**表15.2 十进制、十六进制和等价的二进制**
+
+| 十进制 | 十六进制 | 等价二进制 |
+| ------ | -------- | ---------- |
+| 0      | 0        | 0000       |
+| 1      | 1        | 0001       |
+| 2      | 2        | 0010       |
+| 3      | 3        | 0011       |
+| 4      | 4        | 0100       |
+| 5      | 5        | 0101       |
+| 6      | 6        | 0110       |
+| 7      | 7        | 0111       |
+| 8      | 8        | 1000       |
+| 9      | 9        | 1001       |
+| 10     | A        | 1010       |
+| 11     | B        | 1011       |
+| 12     | C        | 1100       |
+| 13     | D        | 1101       |
+| 14     | E        | 1110       |
+| 15     | F        | 1111       |
+
+## 15.3 C按位运算符
+
+
+
+### 15.3.1 按位逻辑运算符
+
+### 15.3.2 用法：掩码
+
+### 15.3.3 用法：打开位（设置位）
+
+### 15.3.4 用法：关闭位（清空位）
+
+### 15.3.5 用法：切换位
+
+### 15.3.6 用法：检查位的值
+
+### 15.3.7 移位运算符
+
+### 15.3.8 编程示例
+
+### 15.3.9 另一个例子
+
+## 15.4 位字段
+
+### 15.4.1 位字段示例
+
+### 15.4.2 位字段和按位运算符
+
+## 15.5 对齐特性（C11）
+
+## 15.6 关键概念
+
+## 15.7 本章小结
+
+## 15.8 复习题
+
+## 15.9 编程练习
