C_第15章 位操作

--- a/C_第15章 位操作.md
+++ b/C_第15章 位操作.md
@@ -171,11 +171,101 @@ eg: `.101` 表示为：
 
 ## 15.3 C按位运算符
 
-
-
+`8` 位二进制数，从左往后每位的编号为 `7 ~ 0`。
 ### 15.3.1 按位逻辑运算符
 
+4 个按位逻辑运算符都用于整型数据，包括 `char`。
+之所以叫做 **按位(bitwise)**运算，是因为这些操作都是针对每一个位进行，不影响它左右两边的位。
+
+注意：不要把这些按位运算符与常规的逻辑运算符（`&&`、`||`和 `!`）混淆，常规的逻辑运算符操作的是整个值。
+
+#### 1. 二进制反码或按位取反：`~`
+
+一元运算符 `~` 把 `1` 变为 `0`，把 `0` 变为 `1`。
+
+```cpp
+~ (10011010)    // 表达式
+(01100101)      // 结果值
+```
+
+例：假设 `val` 的类型是 `unsigned char`，已被赋值为 `2`。
+在二进制中，`00000010` 表示 `2`。
+那么，`~val`的值是 `11111101`，即 `253`。
+
+```cpp
+newval = ~val;
+printf("%d", ~val);
+
+// 把 val 的值改为 ~val：
+val = ~val;
+```
+
+#### 2. 按位与：`&`
+
+二元运算符 `&` 通过逐位比较两个运算对象，生成一个新值。
+对于每个位，只有两个运算对象中相应的位都为 `1` 时，结果才为 `1`。
+
+例：对下面的表达式求值
+
+```cpp
+(10010011) & (00111101) // 表达式
+// 由于两个运算对象中编号为 4 和 0 的位都为 1，得：
+(00010001)              // 结果值
+```
+
+#### 3. 按位或：`|`
+
+对于每个位，如果两个运算对象中相应的位为 `1`，结果就是 `1`（只有有一个为真，则结果为真）。
+
+```cpp
+(10010011) | (00111101) // 表达式
+// 除了编号为6的位，其他位至少有一个位为 1
+(10111111)              // 结果值
+```
+
+#### 4. 按位异或：`^`
+
+对于每个位，如果两个运算对象中相应的位一个为 `1`（但不是两个为 `1`），结果为 `1`。（只有一真一假时，结果才为 1）
+
+```cpp
+(10010011) ^ (00111101) // 表达式
+// 编号为 0 的位都是 1，所以结果为 0
+```
+
 ### 15.3.2 用法：掩码
+
+按位与运算符常用于 **掩码(mask)**。所谓掩码指的是一些设置 **开`(1)`** 或 **关`(0)`** 的位组合。
+
+要明白其为掩码的原因，先来看通过 `&` 把一个量与掩码结合后发生什么情况。
+
+例如，假设定义符号常量 `MASK` 为 `2` （即，二进制形式为 `00000010`），只有1号位是 `1`，其他位都是 `0`。
+
+```cpp
+flags = flags & MASK;
+// 或者写成
+
+flags &= MASK;
+```
+
+把`flags`除1号位以外的所有位都设置为 `0`，因为使用按位与运算符(`&`)，任何位与 `0` 组合都得 `0`。
+
+1号位的值不变（如果1号位是 `1`，那么 `1&1` 得 `1`；如果1号位是 `0`，那么 `0&1` 也得`0`）。这个过程叫做“使用掩码”，因为掩码中的 `0` 隐藏了 `flags` 中相应的位。
+
+可以这样类比：把掩码中的 `0` 看作不透明，`1` 看作透明。
+表达式 `flags & MASK` 相当于用掩码覆盖在 `flags` 的位组合上，只有 `MASK` 为 `1` 的位才可见。
+
+![]()
+
+再举例：
+
+```cpp
+ch &= 0xff; /*或者 ch &= 0377; */
+```
+
+前面介绍过 `0xff` 的二进制形式是 `11111111`，八进制形式是 `0377`。
+这个掩码保持 `ch` 中最后 `8` 位不变，其他位都设置为 `0`.
+无论 `ch` 原来是 `8` 位、`16` 位或是其他更多位，最终的值都被修改为 `1` 个 `8` 位字节。
+在该例中，掩码的宽度为 `8` 位。
 
 ### 15.3.3 用法：打开位（设置位）
 
