C_第15章 位操作

--- a/C_第15章 位操作.md
+++ b/C_第15章 位操作.md
@@ -254,7 +254,7 @@ flags &= MASK;
 可以这样类比：把掩码中的 `0` 看作不透明，`1` 看作透明。
 表达式 `flags & MASK` 相当于用掩码覆盖在 `flags` 的位组合上，只有 `MASK` 为 `1` 的位才可见。
 
-![]()
+![15_2_掩码示例](https://raw.githubusercontent.com/KimmiGYH/CPP_Primer_Notes_Public/master/C_%E7%AC%AC15%E7%AB%A0%20%E4%BD%8D%E6%93%8D%E4%BD%9C/15_2_%E6%8E%A9%E7%A0%81%E7%A4%BA%E4%BE%8B.png)
 
 再举例：
 
