--- a/C_第15章 位操作.md
+++ b/C_第15章 位操作.md
@@ -269,7 +269,68 @@ ch &= 0xff; /*或者 ch &= 0377; */
 
 ### 15.3.3 用法：打开位（设置位）
 
+有时，需要打开一个值中的特定位，同时保持其他位不变。
+
+例如，一台IBM PC通过向端口发送值来控制硬件。为了打开内置扬声器，必须打开 1 号位，同时保持其他位不变。这种情况可以使用**按位或(`|`)**运算符。
+
+以上一节的 flags 和 MASK (只有1号位为 `1`)为例。
+
+```cpp
+flags = flags | MASK;
+// 或者写成
+
+flags |= MASK;
+```
+
+把 `flags` 的 1号位设置为 `1`，且其他位不变。
+
+因为使用 `|` 运算符，
+
+- 使用 `|`，任何位与 `0` 组合，结果都为本身；
+- 使用 `|`， 任何位与 `1` 组合，结果都为 `1`。
+
+例如：
+
+假设 `flags` 是 `00001111`，`MASK` 是 `10110110`。下面的表达式：`flags | MASK`
+即是：
+`(00001111) | (10110110)` // 表达式
+
+其结果为：`(10111111)` // 结果值
+
+**总结**：根据 `MASK` 中为 `1` 的位，把 `flags` 中对应的位设置为 `1`，其他位不变。
+
+- `MASK` 中为 `0` 的位，`flags` 与其对应的位**不变**。
+- `MASK` 中为 `1` 的位，`flags` 与其对应的位也为 `1`。
+
 ### 15.3.4 用法：关闭位（清空位）
+
+和打开特定的位类似，有时也需要在不影响其他位的情况下关闭指定的位。
+假设要关闭变量 flags 的1号位。同样 MASK 只有1号位为 1（即，打开）。可以这样做：
+
+```cpp
+flags = flags & ~MASK;
+// 或者写成
+
+flags &= ~MASK;
+```
+
+由于 `MAKS` 除1号位为 `1` 以外，其他位全为 `0`，
+所以 `~MASK` 除1号位为 `0` 以外，其他位全为 `1`。
+
+- 使用 `&`，任何位与 `1` 组合都得本身；
+- 使用 `&`，任何位与 `0` 组合都得 `0`。
+- 所以无论1号位的初始值是什么，都将其设置为 `0`。
+
+例如，假设 flags 是 00001111，MASK 是 10110110。
+
+下面的表达式： `flags & ~MASK`
+
+即是：`(00001111) & ~(10110110)` // 表达式
+
+其结果为：`(00001001)` // 结果值
+
+`MASK` 中为 `1` 的位在结果中都被设置（清空）为 `0`。
+`flags` 中与 `MASK` 为 `0` 的位相应的位在结果中都未改变。
 
 ### 15.3.5 用法：切换位
 
