C_第15章 位操作

--- a/C_第15章 位操作.md
+++ b/C_第15章 位操作.md
@@ -229,7 +229,9 @@ val = ~val;
 
 ```cpp
 (10010011) ^ (00111101) // 表达式
-// 编号为 0 的位都是 1，所以结果为 0
+// 编号为 0 的位都是 1，所以结果为 0，得：
+
+(10101110)              // 结果值
 ```
 
 ### 15.3.2 用法：掩码
@@ -334,9 +336,75 @@ flags &= ~MASK;
 
 ### 15.3.5 用法：切换位
 
+切换位置的是打开已关闭的位，或关闭已打开的位。
+
+可以使用**按位异或(`^`)**运算符切换位。
+
+- 假设 `b` 是一个位(`1` 或 `0`)，如果 `b` 为 `1`，则 `1^b` 为 `0`；如果 `b` 为 `0`，则 `1^b` 为 `1`。
+- 另外，无论 `b` 为 `1` 还是 `0`, `0^b` 均为 `b`。
+
+例如，假设 flags 是 00001111， MASK 是 10110110。表达式：
+
+`flags ^ MASK`
+即是：
+`(00001111) ^ (10110110)`       // 表达式
+
+其结果为：
+`10111001`                      // 结果值
+
+flags: 00001111
+MASK:  10110110
+结果：  10111001
+
+**总结**：`flags` 中 与 `MASK` 为 `1` 的位相对应的位都被切换了，`MASK` 为 `0` 的位相对应的位不变。
+
 ### 15.3.6 用法：检查位的值
 
+有时，需要检查某位的值。
+例如：flags 中1号位是否被设置为 1？
+
+我们必须覆盖 `flags` 中的其他位，只用 `1 号位`和 `MASK` 比较：
+
+```cpp
+if ((flags & MASK) == MASK)
+    puts("Wow!");
+```
+
+由于按位运算符的优先级比 `==` 低，所以必须在 `flags & MASK` 周围加上圆括号。
+
+为了避免信息漏过边界，掩码至少要与覆盖的值宽度相同。
+
 ### 15.3.7 移位运算符
+
+#### 1. 左移: `<<`
+
+左移运算符(`<<`)，假设 `stonk` 为 `1`，那么 `stonk << 2` 为 `4`，但是 `stonk` 本身不变，仍为 `1`。
+
+```cpp
+int stonk = 1;
+int onkoo;
+onkoo = stonk << 2; /* 把 4 赋给 onkoo */
+stonk <<= 2;        /* 把 sotnk 的值改为 4 */
+```
+
+#### 2. 右移: `>>`
+
+```cpp
+int sweet = 16;
+itn ooosw;
+
+ooosw = sweet >> 3; // ooosw = 2，sweet 的值仍然为 16
+sweet >>= 3;        // sweet 的值为 2
+```
+
+#### 3. 用法：移位运算符
+
+移位运算符针对 2 的幂提供快速有效的乘法和除法：
+
+```cpp
+number << n;    // number 乘以 2 的 n 次幂
+number >> n;    // 如果 number 为非负，则用 number 除以 2 的 n 次幂
+```
 
 ### 15.3.8 编程示例
 
